--- a/API笔记/异步锁.md
+++ b/API笔记/异步锁.md
@@ -1,1 +1,109 @@
-﻿
+﻿# 同步基元
+
+## 资源独占
+
+`lock`语句可以将引用类型的对象头中的同步块设置为当前线程。
+然后仅当前线程可以访问此对象。
+
+- `Monitor`（监视锁）是`lock`语句的工作原理。
+  但`lock`语句会扩展为`try-finally`块，以在异常的时候也能释放锁。
+- `Mutex`（互斥锁）是可以跨进程通信的监视锁。
+- `SpinLock`（自旋锁）。是不会导致线程休眠的锁。它可以更快地继续任务。
+  但会大量消耗CPU资源。原理类似于不断执行一个死循环。
+
+```csharp
+int num = 0;
+object o = new object();
+
+Parallel.For(0, 1000, i =>
+{
+	for (int j = 0; j < 1000; j++)
+	{
+		lock (o)
+		{
+			num++;
+		}
+	}
+});
+Console.WriteLine(num);
+```
+
+## 信号
+
+### SemaphoreSlim
+
+`SemaphoreSlim`可以限制同时访问的线程数。`Semaphore`是SemaphoreSlim`的跨进程版本。
+
+```csharp
+SemaphoreSlim slim = new SemaphoreSlim(10);
+try
+{
+	await slim.WaitAsync();
+    Console.WriteLine(slim.CurrentCount);
+}
+finally
+{
+	slim.Release();
+}
+```
+
+每当`Wait`或`WaitAsync`方法调用时，允许通过计数会`-1`。
+计数为`0`时，`Wait`或`WaitAsync`会让调用者进入等待。
+
+`Release`方法会让计数`+1`（或更多，在方法参数里选填增加数量）。
+`Release`方法可以凭空增加计数，让计数超过初始值。
+
+```csharp
+SemaphoreSlim slim = new SemaphoreSlim(10,10);
+slim.Release();
+```
+
+### ManualResetEventSlim
+
+`ManualResetEventSlim`是只有一个计数的信号锁。
+
+- `Wait`开始等待
+- `Set`放开所有线程
+- `Reset`重置，让之后的`Wait`又需要等待
+
+`AutoResetEvent`是一次只放行一个线程的信号锁。
+
+- `Wait`开始等待
+- `Set`放开一个线程，并调用`Reset`，让其他线程仍然要等待。
+- `Reset`重置，让之后的`Wait`又需要等待
+
+### 读写锁
+
+`ReaderWriterLockSlim`读写锁并不限制对某个资源的访问。也只是一种信号方式的锁。
+
+- `TryEnterReadLock`注册为读线程
+- `TryEnterUpgradeableReadLock`注册为预约独占线程
+- `TryEnterWriteLock`注册为写独占线程。
+- `ExitReadLock`，`ExitUpgradeableReadLock`，`ExitWriteLock`注销注册。
+>
+- 读线程只能注销注册，不能且为其他状态。
+- 预约独占可以进入独占模式。但会卡住，直到其他读线程都退出。
+- 预约独占可以降级为读模式，但仍然从预约独占退出。
+- 独占/预约模式存在时，之后注册独占和预约的线程会卡住，直到这个线程退出。
+
+## 计数
+
+### 计数到达
+
+`CountdownEvent`可以阻挡多个线程，直到计数为0时同时放开。
+
+- 构造器决定初始计数
+- `AddCount`增加计数
+- `Signal`减少计数
+- `Wait`等待。直到计数将为0。
+- `Reset`重置为初始计数
+
+### 屏障
+
+`Barrier`像一种自动的计数到达。在放开线程的同时放开重置计数。
+
+- 构造器决定初始计数。
+- `AddParticipant`方法增加当前计数和储存的初始计数
+- `RemoveParticipant`方法减少计数和储存的初始计数
+- `SignalAndWait`减少计数并等待计数到0。到0的时候放开并把计数设置为储存的初始计数。
+
