新的状态机

--- a/语法/元组.md
+++ b/语法/元组.md
@@ -10,9 +10,9 @@
 那么就会把元组的元素依次赋值给这些变量。
 
 ## 元素命名
-1. 类型命名：在声明元组类型时，在类型后写了名字（就行方法的参数那样），那么就会命名这些元素。
-1. 值命名：使用`var`声明元组时，如果值在打包时进行了命名，那么会使用这些名字。
-1. 推断命名：使用`var`声明元组并且打包的时候也没有命名，如果值用的是变量这种有名字的，那么会使用变量名。
+1. 类型命名：在声明元组类型时，在类型后写了名字（就像方法的参数那样），那么就会命名这些元素。
+2. 值命名：使用`var`声明元组时，如果值在打包时进行了命名，那么会使用这些名字。
+3. 推断命名：使用`var`声明元组并且打包的时候也没有命名，如果值用的是变量或属性，那么会使用变量名。
 
 ## 访问元组
 元组元素可以通过`元组.Item1`的方式进行访问。
