更新学习笔记，到方法

--- a/语法/类成员.md
+++ b/语法/类成员.md
@@ -176,3 +176,35 @@ record Rec(string FirstName, string LastName)
 	record Rc2();
 }
 ```
+
+
+<!--
+using System.IO.Compression;
+
+var t = typeof(P);
+
+foreach (var item in t.GetMembers(System.Reflection.BindingFlags.NonPublic | System.Reflection.BindingFlags.Instance))
+{
+	Console.WriteLine(item.ToString() + "\t" + item.MemberType);
+}
+
+
+class P
+{
+	 int A { get; set; }
+	/*int get_A()
+	{
+		return 1;
+	}
+	void set_A(int value)
+	{
+
+	}*/
+	int this[int i] { get => 0; set => _ = value; }
+
+	//int Item(int i) { }
+	//	void set_Item(Int32 a, int value) { }
+
+}
+
+-->
