更新学习笔记

--- a/语法/命名空间.md
+++ b/语法/命名空间.md
@@ -2,8 +2,11 @@
 
 ## 定义命名空间
 
-类同样不能重名。为了区分类，可以使用命名空间隔离他们。
-命名空间的作用类似于文件夹。不同文件夹下的文件是可以同名的。
+命名空间起到类似文件夹的作用
+
+- 归纳整理类，相关的类放在同一个命名空间下
+- 不同命名空间下的类可以同名
+- 声明命名空间时可以一次性声明多层级的命名空间，使用`.`隔开
 
 ```csharp
 namespace Plain//郊外
@@ -15,19 +18,17 @@ namespace Plain//郊外
 
 	class wildBoar;//野猪
 }
-```
-
-声明命名空间时可以一次性声明多层级的命名空间，使用`.`隔开
-
-```csharp
 namespace Plain.Castle
 {
-	class Candle;//诡异的蜡烛
+	class Candle;//蜡烛
 }
 ```
 
-使用文件命名空间，可以指定该文件下所有类都处于此空间中。
-但不能再声明其他命名空间，或使用顶级语句。
+命名空间可以以分号结尾
+
+- 该文件下所有类都会处于这个命名空间里
+- 一个文件里只能有一样这样的命名空间
+- 文件命名空间和顶级语句冲突
 
 ```csharp
 namespace Plain.Castle;
@@ -35,9 +36,10 @@ namespace Plain.Castle;
 
 ## 完全限定名
 
-在调用有重名的类或没有引用命名空间时，
-需要带上他的完整命名空间名。
-对于没有命名空间的，使用`global::`(两个冒号)表示根路径。
+一个类带上他的完整命名空间，称为完全限定名。
+
+- 没有命名空间的，使用`global::`表示根路径。
+    - 唯一连用两个冒号的地方
 
 ```csharp
 global::Boo boo1 = new global::Boo();
@@ -53,16 +55,38 @@ namespace A.B.C
 
 ## 引用命名空间
 
-在文件的开头，或一个命名空间的类定义之前，可以使用`using`引用命名空间。
-引用命名空间后，在作用域内使用这些命名空间下的类不需要再写完全限定名。
+引用命名空间可以使作用范围内的类  
+可以直接访问这些命名空间下的类而不需要再写完全限定名。
+
+- 使用`using`引用命名空间
+- 在文件定义命名空间前可以引用命名空间，作用范围是这个文件
+- 在命名空间里定义类前可以引用命名空间，作用范围是这个命名空间的大括号内
+    - 这个大括号外的其他处是无效的，即便命名空间相同
+- 每个命名空间始终视为引用了自己
+- 如果引用的命名空间里有类同名或是与某个引用的命名空间同名，仍然需要完全限定名。
 
 ```csharp
-using A.B.C;
-Foo foo = new Foo();
+using A;
 
 namespace A.B.C
 {
 	class Foo;
+}
+namespace A.B
+{
+	using A.B.C;
+	class Boo
+	{
+		Foo foo1;
+	}
+}
+namespace A.B
+{
+	class Boo2
+	{
+		Foo foo1;//在别的大括号里引用命名空间不能使用
+		Boo boo;//没有引用命名空间却可以使用
+	}
 }
 ``` 
 ## 类型别名
@@ -85,10 +109,10 @@ namespace Gas
 使用`static using`可以导入一个类型的所有静态成员，
 在不点出他的类名的情况下使用他的静态成员。
 
-成员常量和嵌套类也会被认为是静态成员。
+- 成员常量和嵌套类也会被认为是静态成员。
 
 ```csharp
-using static System.Int32;//int关键字就是这个类型的类型别名
+using static System.Int32;//int关键字代表的类型
 
 int int32 = Parse("32");
 int max = MaxValue;
