--- a/语法/委托.md
+++ b/语法/委托.md
@@ -1,72 +1,86 @@
 ﻿# 委托
 
-委托是方法的类型，用于把方法储存为变量。
+委托类型用`delegate`+方法签名定义。  
+该类型的有效值是任何与这个委托的方法签名匹配的方法。
 
-在设计API时，你无法得知你的调用者定义了什么方法，
-所以你不能在你的方法内去调用他们写的方法。
-
-只能将他们的方法作为参数传入你的方法，
-然后从变量上调用他们的方法。
+- 需要返回值和参数列表匹配，名字不需要匹配
+- 一个方法可以给任意签名匹配的委托赋值，但这些委托之间不能相互赋值
+- 用方法赋值时不能带括号，带括号是调用方法
 
 ```csharp
-GetName getName = SayHello.ToLower;
+GetName getName = ToLower;
 
-SayHello say = new SayHello(getName);
-say.Hello("World");
-say.Hello("Apple");
+Console.WriteLine(getName("World"));
+Console.WriteLine(getName("Apple"));
 
-class SayHello(GetName getName)
+string ToLower(string str)
 {
-	public void Hello(string name)
-	{
-		var s = getName(name);
-		Console.WriteLine(s);
-	}
-	public static string ToLower(string name)
-	{
-		return name.ToLower();
-	}
+	Console.WriteLine("转小写: " + str);
+	return str.ToLower();
 }
 
 delegate string GetName(string name);
 ```
-委托的定义看起来是个没有主体的方法。
 
-只有返回值和参数数量，类型，顺序能匹配的方法才能作为委托的值。
+## 使用场景
 
-## 为什么要把方法储存为变量再调用而不直接调用方法
+### 回调函数
 
-使用参数的意义就是除了参数不同以外，其他的逻辑都一样。
-仅有调用的方法不同，这种可能也是有的。
+假设现在有一个类，他的作用是下载文件。并希望下载完成时做些什么。
 
-对API的发布者来说，可能不知道使用者要调用什么方法。
-例如微软已经写好的API，你不能指望先把你的方法上传，
-等他们通过验证，然后让他们在他们自己的源码里去调用你的方法。
-最后等他们发布更新。
+- 谁决定做什么
+    - 下载类不能预测要做什么，可能要解压压缩包，可能要文字转二维码。
+    - 调用者明确知道要做什么。
+- 谁决定什么时候做
+    - 下载类知道文件什么时候下载完成。下载完成就可以立刻执行。
+    - 调用者不知道什么时候下完。如果要循环检查，势必会耽误他手头的工作。
 
+### 排序依据
+
+集合类型之一`List<T>`（列表）有一个排序方法。可以传入一个委托指定排序依据。
+
+- 谁决定做什么
+    - 列表知道两个元素的大小关系后，由列表决定如何摆放，以及下一个比较谁
+    - 调用者决定如何判断两个元素的大小关系
+
+### 创建线程
+
+c#的线程类有一个构造器接收委托。在开启线程时会执行这个委托
+
+- 谁决定做什么
+    - 调用者决定执行什么内容
+- 谁决定在哪里执行
+    - 线程类会创建线程，并在新线程上执行
 
 ## 多播委托
 
-委托也可以和方法进行`+`和`-`，当一个委托储存了多个方法时称为**多播委托**
-
-多播委托会记录下所有`+`过的方法。
-在调用时会按照`+`时候的顺序依次调用。
-但只能得到最后绑定方法的返回值。
-
-多播委托可以用`-`解绑方法，它会从记录过的方法里找到相同的方法，
-并解绑第一个匹配项。找不到则无事发生，不会报错。
+- 委托可以和方法进行`+`运算
+    - 当一个委托储存了多个方法时称为**多播委托**
+    - 多播委托在调用时会按照`+`的顺序依次调用。
+    - 只能得到最后绑定方法的返回值。
+- 多播委托可以用`-`解绑方法，
+    - 它会从记录过的方法里找到相同的方法，并解绑第一个匹配项。
+    - 找不到则无事发生，不会报错。
 
 ```csharp
 Log log = new Log();
-GetName getName = SayHello.ToLower;
+GetName getName = ToLower;
 getName += log.Loging;
+getName("你好");
 
+string ToLower(string str)
+{
+	Console.WriteLine("转小写: " + str);
+	return str.ToLower();
+}
+
+delegate string GetName(string name);
 class Log
 {
 	public string? Name { get; set; }
 	public string Loging(string s)
 	{
-		Console.WriteLine("记录到" + Name);
+		Console.WriteLine("记录到: " + s);
 		return Name = s;
 	}
 }
@@ -74,16 +88,12 @@ class Log
 
 ## 事件
 
-把委托作为字段时，一般不能向外部直接公开。
-委托的调用时机应该由自己决定，
-委托的注册应该由每个需要的自己注册。
+如果一个类储存委托，并可能调用多次。这个委托要用字段储存起来。
+同时像外部公开委托的注册和退订。
 
-如果公开委托（包括用属性公开），
-会让外部随意调用别人注册的方法，
-也会让别人注册的方法被清空。
-
-事件只有针对委托的只有注册和退订访问器。
-调用者只能对事件进行`+=`和`-=`。
+事件只有针对委托的只有注册和退订访问器。  
+调用者只能对事件进行`+=`和`-=`。  
+以调用事件上的`add`和`remove`访问器
 
 ```csharp
 Log log = new Log(); 
@@ -114,11 +124,10 @@ class SayHello
 如果不需要逻辑，可以省略访问器，只留下`event`。
 
 - 事件会生成一个匿名委托
-  - 在声明类可以直接把事件当委托调用。
-	- 仅限于声明类，即便派生类有访问权限也不行。
-	  - 嵌套类可以访问。 
-	- 仅限于能存在字段（不能是接口）的事件
-	- 仅限于能存在逻辑（不能有抽象修饰）的事件。
+  - 仅限于能存在字段（不能是接口）的事件
+  - 仅限于能存在逻辑（不能有抽象修饰）的事件。
+- 声明类可以直接把事件当做他控制的匿名委托访问。
+  - 匿名委托的访问权限是`private`的，只能在声明类和嵌套类里访问
 
 ```csharp
 class SayHello
@@ -141,17 +150,19 @@ class SayHello
 而不需要从某个实例或类型拿到完整的方法。
 
 ```csharp
-GetName getName = string (string a) =>
+GetName getName =
+//完整的匿名方法
+string (string a) =>
 {
 	return a.ToUpper();
 };
-//完整的匿名方法
 
-SayHello say = new SayHello();
-say.GetName += getName;
+getName +=
+//简略的匿名方法
+a => a.ToUpper();
 
-say.GetName += 
-	a => a.ToUpper();//简略的匿名方法
+delegate string GetName(string name);
+
 ```
 
 一个完整的匿名方法声明如上所示。
@@ -188,4 +199,6 @@ for (int i = 0; i < 5; i++)
 }
 get("");
 get("");
+
+delegate string GetName(string name);
 ```
