--- a/语法/字面量.md
+++ b/语法/字面量.md
@@ -1,6 +1,54 @@
-﻿# 字面量
+﻿# 数据
 
-字面量是在源码中直接写出来的值，不需要经过运算或构造。
+程序里除了指令外，另一个重点是数据。
+
+## 面向对象
+
+c#是一种面向对象语言。**对象**是一种包含数据和指令的概念。
+
+对象的指令通常会访问他包含的数据，所以数据改变会让指令造成的结果改变。  
+同时对象一般会给出能改变自己数据的指令。改变同时保证数据在合法范围内。
+
+## 类型
+
+c#中所有数据都属于一种类型。类型决定了这个数据包含什么数据和指令。  
+例如数字类型可以加减乘除。而文字类型可以拼接，裁剪，查找。
+
+## 字面量
+
+获取数据可以分为以下三种方式：
+
+- 构造  
+  构造是由.Net查验类型，开辟内存，初始化的过程。  
+  这是大部分对象的获取过程。
+
+  ```csharp
+  Console.WriteLine(new int());
+  ```
+
+- 获取  
+  从类型提供的指令或直接获取他们储存的数据。  
+  或许是觉得你没有必要构造，自己构造一个给大家用。  
+  或许是构造后仍然需要配置，处理完了再给你。
+
+  ```csharp
+  Console.WriteLine(int.Parse("1") + int.Parse("2"));//文字转数字，做数学运算
+  Console.WriteLine("1" + "2");//文字的加法会拼接文字得到12
+  ```
+
+- 表达式  
+  值之间可以运算。例如`1+1`，会得到`2`。
+
+- 字面量  
+  一个时间会包含时，分，秒，毫秒等多个数字，是一个对象。  
+  数字类型虽然在c#概念里也叫对象，但它不能再拆分出包含的类型了。  
+  像这种基本类型构造是没有意义的，它们可以直接书写出值。 
+
+  ```csharp
+  Console.WriteLine(12 + 24);
+  ```
+
+能以字面量构造的类型有：
 
 - 整数类型：直接书写数字。
 - 小数类型：直接书写带小数点的数字。
@@ -18,23 +66,14 @@ Console.WriteLine(true);//布尔类型
 Console.WriteLine(value:null);//空引用
 ```
 
->布尔类型参阅流程控制,
-空引用参阅引用类型。
+### 数字的字面量修饰
 
-## 表达式
+#### 强制类型
 
-但需要和表达式进行区分。
-部分类型为了简便，他们的写法也没有经过标准的构造语法。
-但他们在程序执行时仍需要经过构造阶段，
-或是编译时需要经过运算，这些东西称作表达式。
-
-# 数字的字面量修饰
-
-### 强制类型
+数字类型分为很多种类。占用空间更小的类型能储存的范围更小，或是精度更低。
 
 数字的字面量默认是`int`和`double`。
-在整数过大时会自动变为`long`或`ulong`。
-
+在整数过大时会自动变为`long`或`ulong`。  
 在数字的后面可以加后缀，使得强制变为某种类型，不区分大小写。
 
 - `u`:uint或ulong
@@ -44,54 +83,50 @@ Console.WriteLine(value:null);//空引用
 - `d`：double
 - `m`：decimal
 
-整数类型可以加小数类型的后缀变为小数，
-但小数不能加整数类型的后缀。
+整数类型可以加小数类型的后缀变为小数。
 
-### 分隔符
+```csharp
+Console.WriteLine(100);
+Console.WriteLine(10000000000000000000);//如果数字过大会变成其他类型，直到报错。
+Console.WriteLine(10000uL);//由于小写的L和数字1很像，所以一般用大写的L
+Console.WriteLine(10 / 3);//整数除法会忽略余数
+Console.WriteLine(10f / 3);//小数除法会保留小数
+```
 
-在数字中间可以任意添加下划线`_`来作为分割符。
-但不能紧贴小数点。
+#### 分隔符
 
-## 整数特有的字面量
+在数字中间可以任意添加下划线`_`来作为分割符来增加可读性，这不会影响数字的值。
 
-### 2进制和16进制
+```csharp
+Console.WriteLine(1_000_000);
+Console.WriteLine(1_0__0___0_____0______0); 
+ ```
 
-在数字的开头加上`0b`，可以让这个数字以2进制的方式构造字面量。
+#### 2进制和16进制（仅限整数类型）
+
+在数字的开头加上`0b`，可以让这个数字以2进制的方式构造字面量。  
 在数字的开头加上`0x`，可以让这个数字以16进制的方式构造字面量。
 
-## 小数特有的字面量
+```csharp
+Console.WriteLine(0b10000);//16
+Console.WriteLine(0x1a);//26
+```
 
-### 科学计数法
+#### 科学计数法（仅限小数类型）
 
-在物理中，无法得到数学中的绝对精确数字。
+在物理中，无法得到数学中的绝对精确数字。  
 根据测量精度，和误差容忍，只需要数字保持必要的精度。
 
-科学计数法通常以"1.36524*10^12^"这种形式表示。
-前面的部分表示必要的精度，
-后面的部分单纯修正数字的大小。
-为了简写，后面的修正部分会用字母e代替，
+科学计数法通常以"1.36524*10^12^"这种形式表示。  
+前面的部分表示必要的精度，  
+后面的部分单纯修正数字的大小。  
+为了简写，后面的修正部分会用字母e代替，  
 表示为这种形式“1.36524e12”。
 
 小数可以用科学计数法构造。
 此外，小数点前面的0可以省略。
 
----
-
 ```csharp
-//自动类型和强制类型
-Console.WriteLine(100);
-Console.WriteLine(10000000000000000000);//如果数字过大会变成其他类型，直到报错。
-Console.WriteLine(10000uL);//由于小写的L和数字1很像，所以一般用大写的L
-
-//2进制和16进制
-Console.WriteLine(0b10000);//16
-Console.WriteLine(0x1a);//26
-
-//分隔
-Console.WriteLine(1_000_000);
-Console.WriteLine(1_0__0___0_____0______0); 
- 
-//小数类型字面量
 Console.WriteLine(0.0);
 Console.WriteLine(.0);
 Console.WriteLine(1e4);//10000
@@ -99,22 +134,18 @@ Console.WriteLine(12e-2);//0.12
 Console.WriteLine(0e9);//0
 ```
 
-# 文本和字符的字面量修饰
+### 文本和字符的字面量修饰
 
-## 转义
+#### 转义
 
-在源码中，一些符号用在语法里表示功能，
-那么，如果要在源码的文字中表示这些字符，
-就要使用其他的替代方案。
+在源码中，一些字符无法打出（换页，退格），一些字符会有字面量歧义（换行，引号）。  
+那么，如果要在源码的文字中表示这些字符，就要使用其他的替代方案。
 
 这个过程称为转义。
 转义仅用来在源码中表示程序值的时候会发生，
 在程序运行时拼接出来的值不会被转义。
 
-双引号包围表示字符串。
-单引号包围表示单个字符。
-如果想在源码中书写这些字符，
-需要通过转义，他们是由反斜杠开头的特定组合：
+转义是由反斜杠开头的特定组合：
 
 - `\'`：单引号
 - `\"`：双引号
@@ -130,7 +161,7 @@ Console.WriteLine('\u5238');//输出“卷”
 Console.WriteLine("1\t1\n11\t1\n111\t1\n1111\t1");//水平制表符可以根据以及用的字符数量，自动决定生成多少个空格
 ```
 
-## 原始字符串
+#### 原始字符串
 
 有的时候，我们会从其他地方复制东西过来。
 从文件路径复制来的文字中，含有大量反斜杠。
