--- a/语法/接口.md
+++ b/语法/接口.md
@@ -1,15 +1,12 @@
-﻿# 接口定义
+﻿# 接口
 
 ## 声明接口
-
-<!--即便显示实现了基类方法，也会使用隐士实现-->
-
 
 接口通过`interface`关键字声明。接口成员和类的区别有：
 
 - 不能存在实例字段。
-  -  自动属性和自动事件也不会生成对应的匿名字段。
-- 不存在构造器和终结器。
+  - 自动属性和自动事件也不会生成对应的匿名字段。
+- 不存在实例构造器和终结器。
 - 接口成员访问权限默认是`public`
 - 接口的实例方法可以没有主体。
   - 可以用`virtual`修饰，会要求有主体。
@@ -42,12 +39,17 @@ interface IFly
 
 ## 实现接口
 
-接口只提供了对方法的要求。方法的执行依赖于一些储存的数据。
-类和结构可以实现接口满足要求。
+类或结构在定义时可以选择实现任意数量的接口。
+
+- 若如此做，必须要实现接口里的`abstract`成员
+- 接口里没有字段，而设计理念上，类应的属性和方法应当和自己的字段有关
+- 接口不知道实现类有什么字段，所以也不在乎他们如何实现这些成员
 
 ### 隐式实现
 
 当类或结构里有和接口里成员同名同参数，且为`public`的成员时，就是隐式实现了接口。
+
+- 即便接口里的这个成员不是`abstract`也会用同名成员隐式实现
 
 ```csharp
 class Loong : IFly, ICooking
@@ -67,7 +69,9 @@ class Loong : IFly, ICooking
 - 不希望直接用自己的同名成员作为实现
 - 不希望定义或公开同名成员
 - 不满意基类型对接口的实现
-- 接口的成员没有被隐式实现，且具有默认实现。则会视为使用默认实现进行显式实现。
+
+显式实现需要把`接口名.成员`一起作为成员名字，且不能有访问修饰符。
+显式实现的成员**不能通过这个类型调用**，只能转为接口调用。
 
 ```csharp
 class Steak : ICreat, IFood
@@ -82,13 +86,14 @@ class Steak : ICreat, IFood
 }
 ```
 
-显式实现需要把`接口名.成员`一起作为成员名字，且不能有访问修饰符。
-显式实现的成员**不能通过这个类型调用**，只能转为接口调用。
+# 多态
 
-## 多态
+## 类型兼容
 
-实现了接口的类型的实例，可以为接口类型的变量赋值。
-然后从变量调用成员时，会转为从实现接口的实例上调用方法。
+实现了接口的类型，可以视作接口类型给接口变量赋值。
+
+- 接口没有实例构造器，只能以这种方式赋值
+- 从接口调用成员时，会调用实现接口的类型上的方法
 
 ```csharp
 Loong loong = new Loong();
@@ -104,23 +109,15 @@ Console.WriteLine(food.Satiety);
 一个类型可以实现多个接口，不同类型可以以不同方式实现接口。
 这表达了以下设计理念：
 
-- 调用者只希望使用接口的这一小部分功能。
+- 调用者只希望使用接口的这一小部分功能。而不在乎实现类的剩余部分的功能。
 - 调用者不在乎实现类具体如何实现的。
 
-### 为什么要调用接口而不直接调用类
+## 为什么要调用接口而不直接调用类
 
-只有API的发布者有必要在方法参数里使用接口。
-当方法的参数使用接口能比限制为具体的类可以让更多人调用。
+接口变量主要是作为方法参数使用。  
+这样可以让这个方法在更多的情况下被调用。
 
-编程的设计理念中有一点是“不要重复造轮子”。
-意思是已经存在的功能就直接调用，不要自己再去实现一遍。
-因此，对于已经发布的API应当认为这个API已经有很多人使用和依赖这个API。
-不应该再对这个API进行更改。
-
-因为说不定有的功能就是“本功能基于bug运行”。
-因此在API发布时就应该尽可能支持更多的情况。
-
-## 释放接口
+# 可释放接口
 
 对于实现了`IDisposable`接口的类型，可以在声明变量时用`using`修饰。
 
