--- a/语法/方法.md
+++ b/语法/方法.md
@@ -1,187 +1,164 @@
 ﻿# 方法
-## 定义方法
 
-声明方法以如下形式
+- 方法是包含一系列语句的代码块。  
+  方法可以被调用，以在调用处执行方法内的代码。
+- 方法的目的应该具有泛用性。否则没有什么地方能调用。
+- 方法应当具有明确的目的，并且方法名应当描述这个目的。  
+  因为调用处只有这个方法的名字。不明确的名字会降低可读性。
 
-```csharp
-void Fun()//Fun是自定义的名字
-{
-	Console.WriteLine("hello world");
-}
-```
+## 方法定义
 
-和流程控制语句不同，方法的大括号不能省略。
+一个方法由以下部分组成：
 
-### 返回值
-
-`void`表示方法不会返回值。它可以改成一个类型，以在方法结束时传递一个值。
-这样的话，方法内需要使用`return`指明要返回的值。`return`同时会结束方法。
-
-`return`在`void`的方法里也可以用，但`return`后不能跟随值。
+1. 可选修饰符
+    - 多个可选修饰符间没有顺序要求
+1. 返回类型
+1. 方法名
+1. 参数列表
+1. 方法体
 
 ```csharp
-int Fun2()
-{
-	return 12;
-}
-```
-
-### 参数
-
-方法定义的括号里可以声明变量，并不需要初始值。
-但方法内使用时，可以认为它们是有初始值的。
-
-#### 可选参数
-
-参数可以指定初始值。但初始值只能是常量。
-并且在填写默认值后，这个参数之后的所有参数都必须有初始值。
-
-```csharp
-int Fun3(int a, int b = 20)
+int Max(int a, int b)
 {
 	return a > b ? a : b;
 }
 ```
 
-#### 不定长参数
+### 返回类型
 
-方法里的最后一个参数如果是数组，可以用`params`修饰。
+方法可以具有返回类型。调用处可以接收一个这个类型的值。
 
-```csharp
-int? Fun4(params int[] ints)
-{
-	if (ints == null || ints.Length == 0)
-	{
-		return null;
-	}
-	int a = ints[0];
-	foreach (var item in ints)
-	{
-		a = item > a ? item : a;
-	}
-	return a;
-}
-```
+- 一个方法只能定义一个返回类型。不能有时返回`bool`有时返回`int`
+    - 如果需要返回多值，可以使用元组或数组
+    - 或者返回这些类型的公共基类，例如`object`
+- 方法如果不需要返回值，可以返回`void`类型
+- 任何正常结束方法的流程都需要使用`return`结束方法
+    - 如果方法里流程会进入死循环，或抛出异常，那么可以没有`return`
+    - `return`语句同时会结束方法。返回`void`的方法也能用`return`结束方法
 
-## 调用方法
+### 参数
 
-调用方法的语法如下形式
+方法名后面跟着一个小括号。小括号里可以声明变量，这些变量称为**形参**（形式参数）。
+方法在调用时会要求给所有形参传值，所以方法内不需要对参数初始化。
 
-```csharp
-Fun();
-var i1 = Fun2();
-var i2 = Fun3(1);
-var i3 = Fun3(1, 2);
-Fun4();
-Fun4(1);
-Fun4(1, 3);
-```
-
-如果方法有返回值，则可当作值进行赋值，运算，继续访问内容。
-
-如果方法有参数，则需要在括号内依序填入所有符合类型的值。
-有初始值的参数可以不填入，会视作你填入了方法定义时的初始值。
-
-对于不定长参数，可以填入任意数量的参数，它们会打包为数组进入方法内部。也可以直接传递数组。
-
-### 命名参数
-
-在填写参数时可以指定参数名字，以乱序填入参数。
-
-```csharp
-int i3 = Fun3(b: 10, a: 6);
-```
-
-## 隔离和捕获
-
-在方法内，可以访问到方法外的变量。此称为捕获变量。
-
-方法内也可以声明和方法外同名的变量，视作方法外的变量不存在。
+- 捕获和隔离
+    - 方法可以使用外部的变量，这称为捕获变量。
+    - 方法参数名可以和外部变量同名。  
+    若如此做，方法内只能访问到参数，无法访问到外部变量。
+- 可选参数
+    - 参数可以用常量进行赋值。  
+    - 可选参数必须在必填参数后定义。
+- 不定长参数
+    - 方法最后的参数如果是集合类型，可以用`params`修饰
+    - 不定长参数不能有默认值。但可以在可选参数后声明
+- 引用参数
+    - 参数可以用`ref`,`out`,`in`进行修饰
 
 ```csharp
 int a = 1, b = 2, c = 3;
 
 void Boo(int b)
 {
-	a = 10;
-	b = 11;
-	int c = 12;
+	a = 10;//改变外部的变量a
+	b = 11;//改变参数变量
+	int c = 12;//自己创建一个变量
 }
+```
+```csharp
+void Min(out int a, int min = 0, params int[] arr)
+{
+	foreach (var item in arr)
+	{
+		if (min > item)
+		{
+			min = item;
+		}
+	}
+	a = min;
+}
+```
+
+## 调用方法
+
+调用方法必须带上方法的括号。这是区分变量和方法的依据。  
+**即便括号里没有参数。**
+
+如果方法定义时有参数，则：
+
+- 必填参数：  
+必须填入与形参类型匹配的值。填入的值称为**实参**(实际参数)
+- 引用参数：  
+参数前也有加`out`,`ref`修饰。`in`可以不加
+    - 必须用可以赋值的变量作为参数，不能是常量，表达式计算值，方法返回值
+    - `out`参数可以当场声明一个变量，而不必传入已有变量
+- 可选参数：  
+可以不填。会视作使用方法定义时的赋值
+- 不定长参数：  
+除了可以使用参数写明的类型外，  
+还可以依次填入集合的元素类型的参数
+- 命名参数：  
+  参数可以如同元组命名一般指定该值匹配的参数。  
+  若如此做，可以不必以形参顺序传入实参。
+  - 通常在只希望改变后面的可选参数时使用。可选参数不能用`_`来保持默认值。
+
+```csharp
+var i = Max(1, 2);
+Min(out i, 0, -3, 2, -1, 4, 8);
+Min(min: 4, a: out var i2);
 ```
 
 # 引用变量
 
-引用变量可以引用一个可以直接访问的变量。
-当访问引用变量时会改为访问被引用的变量。
-修改引用变量时，也会改为修改被引用的变量。
+变量可以用`ref`修饰，以创建引用变量。  
+对引用变量的重新赋值可以作用到原变量上。
 
 ```csharp
 int a = 10;
-int[] arr = [1,2,3];
-
-ref int b = ref a,c=ref arr[0];
-
-Console.WriteLine($"a:{a},b:{b},c:{c},arr:{arr[0]}"); 
-
-a = 90;
-arr[0] = 60;
-
-Console.WriteLine($"a:{a},b:{b},c:{c},arr:{arr[0]}");
-
-b = 40;
-c = 20;
-
-Console.WriteLine($"a:{a},b:{b},c:{c},arr:{arr[0]}");
+ref int b = ref a;//必须是可赋值的变量
+Console.WriteLine(a);//10
+Console.WriteLine(b);//10
+b = 20;
+Console.WriteLine(a);//20
+Console.WriteLine(b);//20
 ```
 
-## 方法返回引用变量
+## 返回引用变量
 
-引用变量可以作为方法的返回值，但不能构建数组或元组。
-
-创建引用变量时，左右侧的`ref`必须是一致的。
-但方法返回引用变量时，接收者可以是普通变量。
+如果方法的返回值是引用变量。  
+那么调用者可自选接受值还是接收引用。
 
 ```csharp
-int[] arr = [1, 2, 3];
-foreach (ref var item in arr.AsSpan())
-{
-	item = 0;
-}
-foreach (var item in arr.AsSpan())
-{
-	Console.WriteLine(item);
-}
+int[] arr = [1, 2, 3, 4];
+int c = Ref(arr);
+ref int d = ref Ref(arr);
 
-int a = Hello(1);
-ref int b = ref Hello(1);
-ref int Hello(params int[] arr)
+ref int Ref(int[] arr)
 {
 	return ref arr[0];
 }
 ```
 
-## 引用参数
+## 只读引用变量
 
-方法参数也可以是引用变量。并且有`in`和`out`变体。
+引用变量可以加`readonly`，这样的引用变量不能重新赋值。
 
 ```csharp
-int i = 10;
-
-Fun1(ref i, i, out i);
-Fun1(ref i, i, out var p);
-Console.WriteLine(p);
-
-void Fun1(ref int a, in int b, out int c)
+ref readonly int e = ref Ref2(in d);
+ref readonly int Ref2(in int i)
 {
-	c = a;
+	return ref i;
 }
 ```
 
-`ref`参数和`out`参数在传入时也需要填写`ref`和`out`。`in`的填写是可选的。
+## 引用参数
 
-`in`参数在方法内不能对这个参数进行赋值。
-这是为了避免过大的值在复制过程太消耗资源，同时保证不影响调用者。
+参数使用引用变量时，有`in`,`out`两种变体。他们在`ref`的基础上：
 
-`out`参数视为传入时没有值。基本上是为了以前不能返回多个值时使用。
-调用方法时如果有`out`参数，可以同时声明一个变量以供接收。
-
+- `in`只读，不能在方法里重新赋值
+    - 这是为了避免大型值类型的复制成本。  
+    用于引用类型或小型值类型上更可能出现性能损失。
+- `out`：不读初始值
+    - `out`变量在方法里视为未初始化的变量。  
+    并且在离开方法前必须赋值。
+    实参的`out`参数也可以是未初始化的变量，  
+    并且可以当场声明变量。
