--- a/语法/枚举.md
+++ b/语法/枚举.md
@@ -1,10 +1,16 @@
 ﻿# 枚举
 
-枚举是一种值类型，用于定义有限的可选项，例如中国的56个民族，或者扑克牌的花色。
+枚举是定义有限选项的类型
+
+- 枚举是一种值类型
+- 只能定义字段，不能定义其他类型的成员
+    - 字段是常量（静态的）
+	- 可以定义扩展方法
+	- 类型都是所在处的枚举类型
 
 ## 声明枚举
 
-枚举成员只能包含静态字段，直接写标识符，不能写类型、访问修饰符或赋值符号。
+枚举成员直接写标识符，不能写类型、访问修饰符或赋值符号。
 
 ```csharp
 Card Card = new Card(Suit.Spade,4); 
@@ -24,7 +30,7 @@ enum Suit // 花色
 枚举的本质是数字，所以枚举可以声明常量。
 枚举也可以和数字相互转换，甚至进行数学运算。
 
-通过强转得到的美剧类型，可能超出定义值。
+通过强转得到的枚举类型，可能超出定义值。
 
 ```csharp
 Card.Suit += 1;
@@ -38,8 +44,7 @@ int i = (int)Card.Suit;
 
 1. 如果是第一个成员，则绑定0。
 2. 绑定前一个成员的数值加1。
-
-数值绑定可以出现重复或无序的情况，这会导致混淆。
+- 数值绑定可以出现重复或无序的情况，这不会报错但会导致混淆。
 
 ```csharp
 enum Suit : int // 花色
