--- a/语法/模式匹配.md
+++ b/语法/模式匹配.md
@@ -1,169 +1,103 @@
 ﻿# 模式匹配
 
-模式匹配是一系列对于值的类型进行判断，对内容与**常量**进行判断的判断。
+模式匹配是一系列与常量进行比较的表达式。  
+可以与`switch`选择和表达式配合使用。  
+单独使用（如在`if`中）则需要使用`is`开启。
 
-模式匹配对值的类型判断仅判断继承关系，不判断类型自定义的转换，
-但基本数字类型除外，他们的值过于基础可以互换。
+模式匹配不检查自定义的类型转换和自定义运算符。
 
-通常以`is`运算符和`switch`的分支里进行启用。
-当`switch`选择的`case`使用了模式匹配，就不能作为`goto`的标签使用。
+## 值判断
 
-## 类型转换
-
-类型转换使用`as`尝试对值进行类型转换。
-如果转换失败不会报错，而是会得到`null`。
-`object o = 12;string s = o as string;`
-
-## 类型判断
-
-类型判断仅判断类型，得到一个`bool`值。
+- 关系判断可以判断一个值是否为某一常量
+    - 若要与数字类型比较，则可以使用`>`，`<`，`>=`，`<=`
+    - 若被判断的类型编译器已知是几种可为常量的数字类型，则可以跨类型比较值
+	- 匹配`null`时不会使用`==`判断，运算符可以自定义执行逻辑。
+- 如果有且或非，需要用关键字`and`,`or`,`not`
 
 ```csharp
-object o = 12;
-switch (o)
-{
- case int:
- case string:
- default:
-    break;
-}
-if (o is int)
-{
+float f = 1f;
+Console.WriteLine(f is 1);//true
+						  //已知是基础数字类型的可以跨类型比较
+Console.WriteLine(f is >= 1f and <= 2f);//true
 
-}
-bool b = o is string;
+object o = f;
+Console.WriteLine(o is >= 1 or <= 1);//false
+									 //已经被装箱的数字需要匹配类型
+Console.WriteLine(o is not (2f or <= 0f));//true
+										  //优先级and>or>not。可以用括号改变优先级
+
 ```
 
 ## 内容判断
 
-### 成员
-
-使用一对大括号可以在里面判断各成员的值是否满足要求。
-
-内容判断可以嵌套。
+- 用`{}`展开一个值的属性，可以嵌套地对里面的属性进行模式匹配
+    - 一个什么属性也不检查的空`{}`相当于`xx is not null`
+- 如果一个值可以被迭代，则可以用`[]`嵌套地对他的元素进行模式匹配
+    - 用`_`占位元素但不验证
+    - 列表模式可以用`..`表示任意个元素，使得表达式只检查头尾指定数量的元素
+        - `..`在一个列表模式里之多用一个，否则无法区分元素所在位置
 
 ```csharp
-var student1 = (age: 12, name: "小明");
-if (student1.name is { Length: 3 })
-{     
-} 
-switch (student1)
+string s = "hello";
+if (s is { Length: 5 })
 {
-    case { age: 12 }:
-    case { name: "小刚" }:
-    case { age: 16, name: { Length: 2 } }:
-    case { }:
-    break;
+	Console.WriteLine("长度为5");
+}
+if (s is [ _, 'e', ..])
+{
+	Console.WriteLine("第二个字符是e");
 }
 ```
 
-### 解构
+## 类型判断
 
-对于可以解构的类型，在模式匹配时可以对其先解构值再进行匹配。
-
-解构时，使用`_`舍弃部分值的匹配
+- 直接填写类型可以判断值是否为此类型
+    - 若只判断为一个类型，可以同时声明变量
+    	- 如果要多次使用表达式计算来的值，可以此当场声明变量
+    - 类型后可接内容判断或值判断
+    - 可以以`var`匹配任何类型来声明中间变量，以写单一表达式
+    	- 内容判断里的任何嵌套属性可以声明变量
+    	- 列表模式下的`..`可以声明变量
+- 不会验证自定义的类型转换，只检查基于继承的类型匹配
 
 ```csharp
-var student1 = (age: 12, name: "小明");
-var s = student1 switch
+object o = "hello";
+switch (o)
 {
- (12, { Length: 2 }) => "",
- (_, "小明") => "",
- _ => ""
-};
+	case string { Length: var len }://声明内容为变量
+	case int[] and [_, _, .. var p]://声明列表为变量
+	case int i2 when (i2 + 3) is var i3 && i3 > i2 * 2 && i3 < i2 * 3://把表达式的值声明变量
+		break;
+}
+
+if (o is not int i)
+{
+	i = 2;
+}
+Console.WriteLine(i);
 ```
 
-### 范围
+## 解构
 
-对于集合，可以使用范围对里面的元素进行判断。
-`..`表示忽略这部分的元素，剩余部分表示仅匹配开头和结尾。
-
-`..`在一个范围判断力最多用一次，因为多个存在时，无法判断中间的元素到底在第几个。
-如果不使用`..`，那么连同这个元素的数量也有要求。
+- 如果一个值可以被解构，则可以边解构边进行匹配
+    - 用`_`表示舍弃
+    - 可以同时进行类型判断来进行解构
 
 ```csharp
-switch ("hello")
+switch ((12, "小米"))
 {
- case ['h', 'e', .., 'o']:
- case [.., 'e']:
- default:
-    break;
+	case ( > 5, { Length: >= 5 }):
+	case { Item1: > 3 }://元组仍然可以用内容判断
+	case (var age, _):
+	default:
+		break;
 }
-```
-
-## 值判断
-
-### 关系
-
-和数字比较时可以加上`>`，`<`，`>=`，`<=`，如果判断相等则不需要加符号。
-如果判断不相等，则需要使用逻辑的非
-
-### 逻辑
-
-在有多个判断需要联合时，可以使用逻辑判断。
-`not`非，`and`与，`or`或。
-
-```csharp
-object o = "";
-if (o is int and > 3 and < 9 and not 4)
+object o2 = (12, "小米");
+switch (o2)
 {
-}
-if (o is int or string { Length: 2 } or bool)
-{
-
-}
-```
-
-## 声明
-
-在类型判断后可以加这个类型的内容判断。
-如果整个判断只涉及到一个类型，那么可以同时声明一个变量，表示匹配成功时创建这个变量。
-
-在内容判断时，可以对内容进行声明。
-
-```csharp
-object point = (x: 1, y: 3);
-switch (point)
-{
- case int i:
-    Console.WriteLine(i + i);
-    break;
- case string { Length: var len }:
-    Console.WriteLine(len);
-    break;
- case (int a, int b) when a < b:
-    Console.WriteLine(a + b);
-    break;
-}
-```
-
-不匹配的声明会视为未赋值的变量，配合流程控制视其总是被赋值过。
-
-```csharp
-string s2 = "";
-if (s2 is { Length: 2 } s3)
-{
- Console.WriteLine(s3);
-}
-else if (s2 is string s4 and not { Length: > 4 })
-{
- Console.WriteLine(s4);
-}
-else if (s2 is not string s5)
-{ 
- //此处s5是未赋值的变量
-}
-else
-{
- Console.WriteLine(s5);
-}
-```
-
-范围判断时，可以把范围作为声明。只想声明不想进行判断的，可以使用`var`作为类型。
-
-```csharp
-if ("hello" is ['h', .. var p, 'o'])
-{
- Console.WriteLine(p);
+	case ValueTuple<int, int>(var a, var b)://元组类型的书面写法
+	case ValueTuple<int, string>(> 5, _):
+	default:
+		break;
 }
 ```
