--- a/语法/泛型.md
+++ b/语法/泛型.md
@@ -1,35 +1,16 @@
 ﻿# 泛型
 
-泛型是类型参数。对于不同类型的参数执行相同逻辑，类似于数组。
-
-## 泛型方法
-
-方法（不含属性，索引，事件）可以声明泛型。
-这种泛型将在方法签名里和主体里视为存在的类型。
-
-调用泛型方法时，需要填入真实可用的类型（也可以是另一个泛型）。
-如果可以从参数里判断出所有的泛型，可以省略填写泛型。
-
-```csharp
-Tool.GetOrDefault<string>(default, default!);
-Tool.GetOrDefault(null, "666");
-
-static class Tool
-{
-	public static T GetOrDefault<T>(T? get, T def)
-	{
-		return get != null ? get : def;
-	}
-}
-```
+集合类型通常来说，只收集，管理值，但不调用值的任何内容。  
+像这种不在乎什么类型，但要求类型一致的场合，可以使用**泛型**。
 
 ## 泛型类
 
-类，结构，接口，委托在声明时可以声明泛型。
+在类名后可以定义泛型参数。在类中会视为这种类型存在。
 
-字段，属性，索引，事件的类型，方法的参数和返回值都可以使用泛型。
-
-构造器和类型同名时不需要抄写泛型定义，但调用时需要完整填写泛型（不能推断）。
+- 类，结构，接口，委托都可以声明泛型参数
+- 字段，属性，索引，事件的类型，方法的参数和返回值都可以使用泛型
+- 构造器定义时抄写类名的时候不需要抄写泛型
+- 访问泛型类的静态成员，或是实例化泛型类时，需要填写有效类型传入泛型参数里
 
 ```csharp
 class Lump<T>(T[] items)
@@ -49,41 +30,78 @@ class Lump<T>(T[] items)
 } 
 ```
 
-### 泛型类是不同的
+## 泛型方法
 
-不同的泛型类的各自拥有不同的静态成员。
+在方法名后可以定义泛型参数。在方法中会视为这种类型存在。
 
-泛型数量不同的同名类可以共存。
+- 不包括属性，索引，事件
+- 泛型方法可以不在泛型类中定义
+- 调用泛型方法时，需要填入有效类型
+    - 如果调用者也有泛型，也可以传入他的泛型
+	- 如果可以从参数里判断出所有的泛型，可以省略填写泛型
+- 泛型名可以和类上的泛型名相同。若如此做，方法里边无法访问类的同名泛型
+
+```csharp
+Tool.GetOrDefault<string>(default, default!);
+Tool.GetOrDefault(null, "666");
+
+static class Tool
+{
+	public static T GetOrDefault<T>(T? get, T def)
+	{
+		return get != null ? get : def;
+	}
+}
+```
+
+## 不同参数的泛型类是不相同的
+
+- 泛型类可以和泛型参数数量不同的同名类处于同一个命名空间下
+- 不同的泛型类的各自拥有不同的静态成员
+    - 泛型类中的嵌套类也各不相同
 
 ```csharp
 StaticValue<int>.Value = 10;
 StaticValue<double>.Value = 20;
 Console.WriteLine(StaticValue<int>.Value + StaticValue<double>.Value + StaticValue<string>.Value);//35
 
+StaticValue<int>.StructValue intStruct = new StaticValue<int>.StructValue();
+StaticValue<string>.StructValue stringStruct = new StaticValue<string>.StructValue();
+intStruct = stringStruct;//类型不兼容
+
+struct StaticValue;
+
 class StaticValue<T>
 {
 	public static int Value = 5;
+	public struct StructValue;
 }
-
-struct StaticValue;
 ```
 
 ## 泛型约束
 
-没有约束的泛型可以填入任何类型，
-那么就无法保证填入的类型能做什么。
-
-对泛型进行约束可以使用约束里的成员。
-但也会让只有满足约束的类型可以传入。
-
+使用泛型约束会限制可以填入的类型，但是可以调用约束里的成员。  
 泛型约束使用`where`定义，多个泛型需要用多个`where`
+
+- 是引用类型：`class`
+    - 派生自某个类：写类名
+    	- 可以是另一个泛型
+- 是值类型：`struct`
+    - 非托管类型：`unmanaged`。遍历整个结构，没有任何引用类型的类成员
+	- 有值类型约束的可空值类型，可以和同名同参数列表的方法重载
+- 实现了某个接口：填写接口名字。
+- 无约束：`default`。在重写时取消基类的约束。
+- 有无参构造器：`new()`。可以用`new`的方式创建实例。
 
 ```csharp
 class Handbook<T> where T : ICreat<T>, IFood
 {
 	public static int Satiety => T.Creat().Satiety;
 
-	public static void Hello<T1, T2>(T1 t1, T2 t2) where T1 : T where T2 : T1
+	public static void Hello<T1>(T1 t1) where T1 : class
+	{
+	}
+	public static void Hello<T1>(T1? t1) where T1 : struct
 	{
 	}
 }
@@ -97,13 +115,6 @@ interface IFood
 	int Satiety { get; set; }
 }
 ```
-
-- 是引用类型：`class`
-- 是值类型：`struct`
-- 实现了某个接口：填写接口名字。
-- 派生自某个类：写类名。
-- 无约束：`default`。在重写时取消基类的约束。
-- 有无参构造器：`new()`。可以用`new`的方式创建实例。
 
 ## 协变逆变
 
@@ -151,14 +162,13 @@ interface IIn<in T>
 
 ## 装箱
 
-引用类型因为有继承，多态，虚方法等功能。
+引用类型因为有继承，多态，虚方法等功能。  
 在调用成员时需要从对象头里查询类型信息，然后查表找到要调用的成员。
 
 值类型是没有对象头的，所以值类型不允许继承。编译器会把要调用的成员写死进去。
 
-把值类型变为引用类型这一过程，要给他加一个对象头。这个过程叫装箱。
-反过来拆对象头也有性能损耗。
+把值类型变为引用类型这一过程，要给他加一个对象头。  
+这个过程叫装箱。反过来拆对象头也有性能损耗。
 
 协变逆变不允许出现需要装箱，拆箱的过程。
-
 更多介绍参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/csharp/programming-guide/types/boxing-and-unboxing)
