--- a/语法/流程控制语句.md
+++ b/语法/流程控制语句.md
@@ -149,7 +149,7 @@ for (int i = 0; i < 10; i++)
 ```csharp
 foreach (var item in "hello")
 {
-	Console.WriteLine(item);
+	Console.WriteLine(item);//item是只读的
 }
 ```
 
@@ -166,6 +166,26 @@ while (temp.MoveNext())
 
 可以被迭代的类型，关键在于`.GetEnumerator()`，`.MoveNext()`，`.Current`。  
 这三个部分告诉循环以什么顺序循环，是否还能循环，当前的值是什么。
+
+## 嵌入语句
+
+`if`, `else if`, `else`, `while`, `do while`, `for`, `foreach`  
+这些流程控制语句可以省略后跟的大括号不写。若如此做：
+
+- 视为后随的第一条语句（包括流程控制语句）在大括号内。
+- 嵌入语句不能是声明语句。没有地方可以访问到这些变量
+
+```csharp
+int r2 = Random.Shared.Next(100);
+if (r2 > 95) 
+	Console.WriteLine("评分为S"); 
+else if (r2 > 85) 
+	Console.WriteLine("评分为A"); 
+else if (r2 > 60) 
+	Console.WriteLine("评分为B"); 
+else 
+	Console.WriteLine("未通过"); 
+```
 
 ## 跳转
 
