--- a/语法/继承.md
+++ b/语法/继承.md
@@ -1,11 +1,13 @@
 ﻿# 继承
 
-在声明**普通类 / 记录类 / 接口**时，可以指定对应的类型作为基类。
+在声明**类 / 接口**时，可以指定对应的类型作为基类。  
 这会获得基类**除了构造器**和终结器的所有**实例**成员。
 
-类只能指定一个类继承，接口可以继承多个接口。
-
-结构，静态类，枚举无法声明继承，但类型声明的关键字让他们和一些类有继承关系。
+- 结构，静态类，枚举无法声明继承
+    - 但仍然和一些系统类有继承关系
+- 类只能指定一个类继承
+    - 普通类只能从普通类上继承，记录类只能从记录类上继承。
+- 接口可以继承多个接口
 
 ```csharp
 class Bulbasaur//妙蛙种子
@@ -39,18 +41,19 @@ ivysaur.VineWhip();
 
 ### 为什么要使用基类型而不直接使用具体的类
 
-使用基类装载变量在一般情况下，仅有为方法声明参数时才有意义。
-
-这样做可以让更多场景下使用这个方法。
+用基类装载变量主要是作为方法参数使用。  
+这样可以让这个方法在更多的情况下被调用。
 
 ## 覆写和重写
 
-派生类可以定义和基类同名的成员。若不加修饰或添加`new`，则是覆写。
-覆写的成员，按照变量类型来访问成员。
+派生类可以定义和基类同名的成员。
 
-基类的方法（属性，索引，事件）可以用`virtual`修饰，
-派生类可以用`override`修饰定义同名方法可以重写逻辑。
-重写的成员按照值的实际类型来访问成员。
+- 若不加修饰或添加`new`，则是覆写。
+    - 覆写的成员，按照变量类型来访问成员。
+- 基类的方法（属性，索引，事件）可以用`virtual`修饰，  
+- 派生类可以用`override`修饰定义同名方法可以重写逻辑。  
+    - 重写的成员按照值的实际类型来访问成员。
+    - 重写的方法签名需要和被重写的方法相同。
 
 ```csharp
 HealthValueAdjustment recovery = new Recovery() { Value = -20 };
@@ -91,19 +94,16 @@ class Recovery : HealthValueAdjustment//恢复值
 
 ## 密封
 
-类型可以添加`sealed`修饰，这样的类型将不允许作为基类。
-
-重写过的方法仍然视为有`virtual`，可以添加`sealed`修饰，不允许派生类再重写。
+- 类型可以添加`sealed`修饰，这样的类型将不允许作为基类。
+- 重写过的方法仍然视为有`virtual`，可以添加`sealed`修饰，不允许派生类再重写。
 
 ## 访问基类成员
 
-无论当前类已经对同名成员进行了重写或复写，
+- 无论当前类已经对同名成员进行了重写或复写，  
 都可以使用`base`访问到基类的成员。
-
-如果无法调用基类的无参构造器，
+- 如果无法调用基类的无参构造器，  
 那么必须定义一个构造器，以构造器链通过`base`访问基类构造器。
-
-如果定义了主构造器，则必须在声明继承时指示基类构造器。
+- 如果定义了主构造器，则必须在声明继承时指示基类构造器。
 
 ```csharp
 record People(string Name)
@@ -140,18 +140,21 @@ record Clerk : People
 2. 从基类到自身依次执行
    1. 构造器
 
-在构造过程中，所有字段都会创建。
-`private`的成员只是派生类无法访问，但依然存在。
-包括自动属性（事件）和主构造器捕获的匿名字段。
+在构造过程中，所有字段都会创建。  
+`private`的成员只是派生类无法访问，但依然存在。  
+包括自动属性（和事件）和主构造器捕获的匿名字段。
 
 `protected`的成员只能在自身和派生类中访问。
 
 ## 抽象类
 
 用`abstract`修饰类可以使其成为抽象类。
-抽象类可以用`abstract`声明抽象方法（属性，索引，事件）。
 
-抽象方法是没有主体（也不会生成匿名类型）的`virtual`方法。
+- 抽象类可以用`abstract`声明抽象方法（属性，索引，事件）。
+    - 抽象方法是没有主体（也不会生成匿名字段）的`virtual`方法。
+	- 抽象的自动属性和自动事件不会生成相应的主体，也不会生成匿名字段
+- 抽象类的构造器只能由派生类调用，不能使用`new`来创建实例
+- 如果继承抽象类的类不是抽象类，那么必须重写所有抽象成员
 
 ```csharp
 abstract class Food
@@ -159,7 +162,3 @@ abstract class Food
 	public abstract int Satiety { get; protected set; }
 }
 ```
-
-抽象类的构造器只能由派生类调用，不能用来创建实例。因为可能包含没有逻辑的方法。
-
-除非派生类也是抽象类，否则必须重写使得所有抽象方法有逻辑。
