--- a/语法/变量.md
+++ b/语法/变量.md
@@ -1,151 +1,133 @@
 ﻿# 变量
 
-在c#中，可以用变量表示一个实例。它可以储存值并行使这个值的所有功能。
+## 实例
 
-实例是说任何可以说“这个”，“那个”的东西。其隐藏含义是，等会还要讨论“同一个”东西。
+**实例**是可以说“这个”，“那个”的东西。能指出哪一个的东西才能讨论“同一个”。
 
-例如用户输入的账号，和用于和数据库判断的账号是同一个。\
-击杀了小兵的英雄，和获得金币的英雄是同一个。
+在编写阶段，我们不知道用户要输入的账号和密码是什么。  
+为此需要有一种东西表示用户输入数据的实例。
 
-在编写阶段，无从得知发生这些事的“账号”和“英雄”是哪一个。所以需要能表示实例的东西。
+## 标识符
 
-### 声明和使用变量
-
-声明一个变量的方式是，关键字`var`+名字+`=`+值。
-
-使用变量则将把应该填入值的地方，用变量代替即可。
-
-```csharp
-var i = 12;
-Console.WriteLine(i);
-```
-
-### 修改变量
-
-修改变量和变量声明类似，但不要最开始的`var`。
-
-变量代表的是值，他本身是有类型的。
-他的类型在声明变量时就确定了，后续修改值也必须使用可以兼容的值。
-
-```csharp
-var i2 = 10;
-i2 = 2 * i2;
-i2 = 20 + i2 * 10;
-Console.WriteLine(i2+i2);
-```
-
->### 分开声明和初始化
->
->声明变量的实际语法是类型+名字。
-关键字`var`的作用是自动识别值的类型。
->
->所以，使用`var`声明变量就必须同时赋值，且值必须是可以识别类型的。
->
->但如果直接写出来类型，那么是不必在声明的同时赋值的。\
->并且可以在一条语句里声明多个（同类型）的变量。
->
->```csharp
->int i3, i4, i5 = 12, i6;
->i4 = 20;
->```
->
->但变量必须赋值后才能读取值。没有初始化的变量无法使用。
->
->而不能识别类型的值，举例来说，关键字`default`和关键字`null`。
->
->```csharp
->int d1 = default;
->var d2 = default;
->```
->
->`default`的作用是根据所需的类型，给出这个类型的默认值。
->而`var`不是明确有效的类型，`default`无法给出默认值，所以`var`也无法确定类型。
-
-# 标识符
-
-标识符是可以任意起名字的东西的名字的标准说法。
-既包括不限于变量名，类型名，方法名。
+变量是可以自定义名称的东西。c#中可以自己起名字的东西的名字称为标识符。
 
 标识符的起名规则如下
 
-- 不能和作用范围内其他标识符重名
-  - 但有优先级差别的除外
+- 不能和有效范围内其他同优先级标识符同名
+    - 如果优先级不同，那么在有效范围内只能访问到最高优先级的东西。
+    - 有效范围是声明时所处大括号内，以及这个大括号里嵌套的大括号内。
 - 不能以数字开头
 - 不能和关键字同名
+    - 关键字是具有功能的词组，一旦出现就会认为要执行功能
 - 不能包含除了下划线外的特殊字符
-  - 但如果和关键字同名，可以在开头加@符号。仅此情况下可以添加@
-  - 中日韩的文字都是有效的
-
->### 可读性
->
->尽管标识符的起名是任意的，但为了可读性，不应该那么随意。
->
->程序的编写可能有很长的时间跨度，或有多人协同。
->因此，代码，或者说编程语言，本身具有传递信息的作用。
->为了让读者从片段能推测出这段代码的作用乃至整个代码的作用，
->即便在片段里也应该包含尽可能多的信息，例如：
->
->- 标识符应该是有意义的，能让读者猜出他即将行使的职责。
->- 标识符应该具有和遵守约定，例如c#中的接口都以字母**I**开头。
->- 实在无法用名字解释的，应当留下注释。
->- 尽可能不使用`var`等不表明类型的方式声明变量。在没有开发软件帮助的情况下，读者难以判断类型。
->
->命名约定参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/naming-guidelines)。
-
-## 关键字
-
-在游戏里设置按键时，通常无法设置**esc**为有效的按键。
-因为通常esc的优先级更高，会直接执行他的指令：取消操作。
-
-关键字是一群类似此效果的东西，他们本身具有操作，具有更高的优先级。
-一旦被使用，会认为需要执行他的操作，而不是认为他是一个标识符。
-
-# 作用范围
-
-通常而言，声明的东西的作用范围，是自身所处大括号内部。包括这个大括号里面的所有层级大括号。
+  - 但如果和关键字同名，可以在开头加@符号
+      - 不和关键字同名时，@仍然是特殊字符
+  - 中文不算做特殊字符
 
 ```csharp
 var v1 = 20;
-{
- var v2 = v1;
- Console.WriteLine(v2);//可以读取
+{//一个大括号是一个效果范围块
+	var v2 = v1;
+	Console.WriteLine(v2);//可以读取
 }
 Console.WriteLine(v2);//无法读取
 {
- var v1 = 20;//无法声明
- var v2 = 20;//可以声明
+	var v1 = 20;//无法声明
+	var v2 = 20;//可以声明
 }
 ```
 
-以此为例，两个**v2**变量的声明都处于一个大括号内部，
-他们的作用范围就在他们自己的大括号里，不会延申到外面。
-所以外面无法访问这个变量。
+## 创建和使用变量
 
-而这两个**v2**变量处于不同的大括号中，所以他们可以同名。
-
-而两个**v1**变量，外部的变量作用范围会覆盖到大括号里面。
-所以里面依然可以访问到外层的变量，会认为重名。
-
-变量的作用范围是自身所处的大括号全部，包括声明之前的位置。
-所以以下代码也不行
+- 声明（创建）  
+  声明变量的方式是`类型+变量名`。
+- 赋值（修改）  
+  赋值语句是`变量 = 值`。  
+  右侧的值可以是任何来源的有效值，包括另一个变量。
+    - 变量储存的是一个值而不是获得值的操作。  
+      例如赋值为表达式`i + 3`时，只会在赋值时计算一次这个表达式。  
+      之后`i`变化的时候，使用这个表达式赋值的变量不会跟随变化。
+- 使用  
+  在任何需要值的地方写入变量，运行时就会解析这个变量里的值。  
+  自己声明的变量必须经过初始化才能使用。
+    - 不要给变量加双引号。若如此做会当作文字而不会解析值。
 
 ```csharp
-{
- var v3 = 30;//内层括号会被认为重名
-}
-var v3 = 30;
+int i;//声明一个int类型的变量
+i = 3;//变量赋值
+Console.WriteLine(i);//使用变量
 ```
 
-># 常量
->
->使用关键字`const`+具体类型的声明变量可以声明常量。
-常量不能修改赋值，且必须使用常量赋值（通常由字面量）。
->
->```csharp
->const int p1 = 10, p2 = 20;
->```
->
->通常，**3.1415926**等特殊数字，或要访问的网址等，会特意设置一个常量。
->他们不会在程序更改时更改，且不希望完整地写出全部的字面量。
->
->常量只有数字，文本，字符，`bool`类型值，各种枚举类型值，和`null`值可以被声明为常量。
+## 变量类型
+
+变量的类型和声明变量时写的类型一致。  
+在赋值时，值的类型必须和变量类型能兼容。  
+
+### var
+
+关键字`var`可以用来在声明变量时代替变量类型，根据值的类型来自动决定变量类型。  
+
+使用`var`作为类型与直接写具体类型有一些优劣区别：
+
+- `var`声明变量一次只能声明一个变量。  
+- `var`声明变量必须在声明的同时立刻赋值。
+- 有时会希望使用与值兼容的类型作为变量类型，而不是完全与值类型相同。
+- 如果读者在离开编程软件的情况下难阅读源码，可能难以判断变量类型。
+
+## 常量
+
+使用关键字`const`+具体类型的声明变量可以声明常量。  
+
+- 常量必须在声明时赋值
+- 不能使用`var`作为类型
+- 常量的赋值必须使用另一个常量
+    - 通常是字面量或仅字面量的表达式。
+- 常量不能修改
+- 只有字面量和枚举值以及`null`可以被声明为常量
+
+```csharp
+const double Pi = 3.1415926;
+```
+
+# 类型转换
+
+部分类型之间可以进行转换。  
+转换是否可行以及转换的方式，取决于源类型和目标类型之间的关系。
+
+## 继承
+
+继承和多态是面向对象语言的特点。  
+若类型A继承了类型B，则：
+
+- A具有B的所有API
+- A可以代替B，因为A能行使B的所有职责。
+- A不需要进行转换也能当B使用。
+
+## 自定义类型转换
+
+没有继承关系的类型可以自定义类型转换。
+
+- 这种转换会产生一个新的值。所以转回来也不一定相同。
+- 转换可能是单向的。可能转不回来。
+- 可以定义显式转换或隐式转换。
+
+## 隐式转换
+
+隐式转换是一种安全的类型转换方式，不会出错也不会丢失数据。（自定义转换应当满足上述理念）。
+隐式转换什么也不需要做，可以当作被转换的值就是目标类型。
+
+```csharp
+int i = 0;
+long L = i;
+object o = i;
+```
+
+## 强制转换
+
+强制转换是有可能不成功或可能丢失数据的转换方式。  
+强制转换需要在被转换的值前面，加上一对小括号，小括号内写目标类型。
+
+```csharp
+i = (int)L;//可能截断部分储存的数字，可能得到非预期结果
+string s = (string)o;//实际储存的类型可能不是目标类型，可能报错
+```
