--- a/语法/引用类型.md
+++ b/语法/引用类型.md
@@ -1,142 +1,131 @@
-﻿# 引用类型
+﻿# 引用
 
-**引用**是指，我不直接包含这些东西，只是告诉你怎么找到这些东西。
+## 指针
 
-例如，当你看到一个视频觉得很有趣，想分享给你的朋友时，
-你一般会直接发送链接而不是先下载整个视频。因为下载视频太慢了。
+当一个数据过于巨大的时候，整个复制是极为消耗性能的。  
+因此有一种传递方法，将这个数据的所在地址复制和传播。
 
-你声明数组时可以轻易要求它创建上亿个变量。
-如果这些数据在程序中传递时如果都完全复制，那么程序也会觉得很慢。
-所以它发出去的，也是链接。
+举例来说，你看到一个有趣的视频想发给朋友。  
+如果把整个视频下载，再把整个文件传给朋友，那要很久。  
+但是如果直接把网址发过去，那就快多了。
 
-下载和传递链接的区别是很大的。使用链接访问的东西，并不是独属于你的东西。
-例如视频，权限还在作者手里，他可以下架这个视频，这样你和你朋友都看不到了。
+这样做也有缺点。这份数据不属于你，  
+可能你朋友网速不好，看视频会很卡。  
+可能过了几天这个视频下架了，或者要VIP了。
 
-## 窜号
+## 引用类型
 
-而引用类型，相当于在使用`new`创建值的时候注册了账号密码。
-在赋值给变量的时候，相当于共享账号密码。
-一个人登录账号做出修改后，别人再登录账号也能看到改动。
+c#中，数组，`class`，接口，都是引用类型。  
+他们在源码中的传递都是他们的地址。  
+当访问他们的内容时，会寻着地址找到数据。  
+由此，引用类型有一些特点：
+
+- 引用类型的变量不储存他的内容
+- 把引用类型直接赋值给另一个变量，这两个变量访问到的内容是共享的
+- 对引用类型的变量加上`只读`，不能阻止他的内容改变
+- 引用类型的默认判断方式是判断他们的地址是否一样（引用到相同数据）
+
+## 不可变性
+
+面向对象编程概念里的对象，是本身具有一些数据，并且可以使用他的方法进行修改。  
+但在c#中有很多类型，只希望他是个只能读取的数据，设计理念不希望他能改变自己身上的数据。 
+
+一般来说，如果一个类型的方法会在自己身上改变数据，  
+那么方法返回`void`，下次再访问就会发现数据变了。  
+如果一个类型是不可变的，那么他的方法会给你一个新值，
+你需要用变量接收他。新值是改变后的值，而他本身不会变化。
 
 ```csharp
-int []arr1 = [1, 2, 3, 4];
-var arr2 = arr1;
-Console.WriteLine(arr1[0]);//1
+int[] arr = [4, 2, 3, 1];
+int[] arr2 = arr;
+
+Console.WriteLine(arr2[0]);//4
+arr[0] = 8;//改变arr却能影响arr2的值
+Console.WriteLine(arr2[0]);//8
+Array.Sort(arr);//不需要为变量重新赋值，变量的内容就会变化
 Console.WriteLine(arr2[0]);//1
-arr1[0] = 33;
-Console.WriteLine(arr1[0]);//33
-Console.WriteLine(arr2[0]);//33
+
+string s = "hello";
+string s2 = s.Replace("llo", "LLO");//需要用变量接受。原变量不会有任何变化
+Console.WriteLine(s);
+Console.WriteLine(s2);
 ```
 
-引用类型的修改，指的是对内容的修改，说的是通过`.`或`[]`访问的东西。
-如果直接对变量重新赋值，那相当于换了一个新的账号密码。
+# 可空引用类型
 
-## 比较，只读
+引用类型可以赋值为`null`值。这是一个非法的地址。访问他的任何内容会报错。
+0长字符串和`null`的区别类似于，网购平台给别人刷单，  
+0长字符串相当于给你发了一个空包裹，虽然包裹没有内容，但还是有配套的快递单之类的。  
+`null`值字符串则是自始没有下单，所以连订单号都不存在。
 
-由于变量本身存储的只有引用/地址/链接/账号。里面的内容不受这个变量管理。
-
-所以当对引用类型进行比较时，只会判断对他是否引用的是同一内容。
-无论他们引用的内容里具体的值是否相同。
-
-而对变量添加只读时，也仅仅是让他无法更换引用到其他值，而不能控制这个值的内容无法改变。
+可空引用类型是在类型后加上`?`，此举不会影响编译后的内容，  
+只是告诉分析器这里的设计思路。如果和预期不同则会出现警告。
 
 ```csharp
-int[] arr3 = [1];
-int[] arr4 = [1];
-Console.WriteLine(arr3.Length == arr4.Length);//true
-Console.WriteLine(arr3[0] == arr4[0]);//true
-Console.WriteLine(arr3 == arr4);//false
-```
+string s4 = null;//给不带?的引用类型赋值null值会出现警告
+string? s5 = null;//在类型后面加?，赋值可能null值就不会出现警告
+Console.WriteLine(s4.Length);//对可能为null值的变量访问内容会出现警告
+Console.WriteLine(s5.Length);
 
-## 如何分辨引用类型
-
-分辨引用类型最简单的办法就是看这个类型能不能接受`null`值。
-如果有IDE的话，可以在设置里对文本着色，给引用类型和值类型上不同颜色。
-
-# null
-
-`null`表示不引用值。
-数组可以创建长度为0的数组，字符串可以创建空字符串。
-尽管这两者情况下，他们看起来无法使用，但和使用`null`还是有区别的。
-
-以刷单类比，你在下单后卖家给你寄一个空盒子快递。
-跟你不下单相比，虽然你收到的东西都没有用，
-但这个过程产生了订单号，快递单号，产生了这些附随的数据。
-
-在创建0长度数组和空字符串的过程中，
-尽管你不能访问他们的元素，但还有其他的内容可以访问。
-而`null`没有任何数据，你不能访问他们的任何内容。
-
-```csharp
-string s1 = "";
-string s2 = null;
-Console.WriteLine(s1.Length);//得到0
-Console.WriteLine(s2.Length);//报错
-```
-
-## 空警报
-
-访问`null`值的内容，是开发时最常见的报错。
-一次更新后添加了分析器对`null`值的分析，并会产生警告。
-警告不会阻止程序的编译。
-
-当你对引用类型赋值一个`null`值时，
-和尝试访问分析器判断可能为`null`值的内容时，
-会得到一个警告。
-
-如果想避免这个警告，
-可以在变量类型后加上`?`表示这个变量允许接收`null`值，
-或在赋值/访问的值后面加`!`表示容忍此处可能为`null`值。
-
-```csharp
-string s1 = null;
-string? s2 = null!;
-
-Console.WriteLine(s1.Length);
-Console.WriteLine(s2!.Length);
+s4 = null!;//在值后面加!会告诉分析器，此处必不会为null
+s5 = null!;
+Console.WriteLine(s4.Length);//之后访问内容就不会出现警告
+Console.WriteLine(s5.Length);
 ```
 
 # 可空值类型
 
-引用类型后加上`?`仅仅是给分析器提示，本身不会添加什么东西。
-而给值类型后加上`?`会实际地改变类型。
+值类型是所有内容都储存在变量里的类型。
+
+- 把值类型赋值给另一个变量，另一个变量的内容改变不会影响到原来的变量
+- 值类型加上只读，里面的内容不会被改变
+- 给值类型的内容赋值，这个内容必须是从变量上访问的  
+  不能是表达式计算结果或方法返回值
+- 默认比较里面的内容
 
 ```csharp
-int? i2 = null; 
-Console.WriteLine(i2.HasValue);
+System.Numerics.Vector3 vector = new System.Numerics.Vector3();
+(vector * 2).X = 6;//表达式的内容改写也无法获取到这个改写
 ```
 
-## 提升运算符
+值类型是直接储存内容的类型，因此不能使用`null`赋值。  
+但如果一个值类型没有表示特殊情况的值，可以在类型后加`?`变成可空值类型。  
 
-可空值类型继承了基础类型的运算符，这一特性是配合编译器联合工作的结果，我们无法复刻。
-可空值类型在使用基础类型的运算符时，遵循以下规则：
+- 这会实际改变编译后的内容
+- 可空值类型可以接受`null`值
+- 可空值类型具有原类型所有运算符，若其中一个为`null`则计算结果为`null`
+- 可空值类型必须通过`.Value`得到原类型的值后才能调用方法
+    - 通过`.HasValue`检查是否为`null`
+    - 如果为`null`，则访问`.Value`会报错
 
-- 如果没有`null`参与，按基础类型的方式执行。但返回值为可空值类型。
-- 当使用关系运算符时
-  - 当双方为`null`且使用`==`运算时，返回`true`
-  - 当仅一方为`null`且使用`!=`运算时，返回`true`
-  - 否则返回`false`
-- 其他二元运算符返回`null`
+```csharp
+int? i = null;
+Console.WriteLine(i.HasValue);//false
+Console.WriteLine(i * 2);//报错
+```
 
 # 空传播
 
-在访问内容的`.`或`[]`前加上`?`，可以在左侧为`null`时终止右侧的内容访问。
-得到该类型的`null`值（值类型就得到这个类型的可空值类型）。
+在访问一个东西的内容前（`.`或`[]`前)加上`?`，  
+则这个东西是`null`的情况下不会继续访问内容，
+表达式后续的所有内容访问都中断。  
+表达式返回的类型会改为可空类型。
 
 ```csharp
-string? s = null;
-Console.WriteLine(s?.Length);
-
-(string, int)? t = null;
-Console.WriteLine(t?.Item1);
+int[]? arr3 = null;
+int? i2 = arr3?[0];//但如果不是null，且索引超出范围，仍然会报错
+i2 = arr3?.Length;
+string? s = arr3?.Length.ToString();
+s = i2?.ToString();//可空值类型用空传播访问内容时，直接视为原类型不需要.Value
 ```
 
-## 空合并运算
+## 空合并
 
-在一个值后面加上`??`表示如果左侧值为`null`，则用右侧值为默认值。
+对一个值后加上`??`，会在左侧为`null`时，改为用右侧的默认值进行替代。
 
 ```csharp
-string? s = null;
-int len = s?.Length ?? 0;
-s ??= "hello";
+s ??= "";//如果为null，则赋值为
+Console.WriteLine(arr3?.Length ?? 0);
+Console.WriteLine((arr3?.Length).GetValueOrDefault(0));
+//可空值类型会有GetValueOrDefault方法，和??效果一样
 ```
