--- a/语法/类成员.md
+++ b/语法/类成员.md
@@ -1,56 +1,42 @@
 ﻿# 类成员
 
-结构，类，接口可以存在声明语句。声明的东西统称为类成员。
-当自定义类型需要声明类成员时，需要用大括号包围。
-没有类成员时，可以改为分号结束声明。
+结构，类，接口的主体内可以存在声明语句。声明的东西统称为类成员。  
+类成员有以下种类：
 
-## 字段
-
-在方法里声明的变量叫局部变量或本地变量。成员变量叫做字段。
-字段可以添加只读`readonly`修饰符，在完成构造阶段后就不能再修改了。
-
-局部变量在方法结束的时候就可以判断不会再被使用了。
-但字段无法做出这种判断。字段跟随自己的实例，只有整个实例都不使用时，字段才会被一起清理。
-
-## 方法
-
-方法里声明的方法叫局部方法或本地方法。
-
-成员方法可以**重载**。重载是指同名的方法，只要他们的参数的数量，类型，顺序不是完全相同的。
-引用参数和普通参数不是同种类型，但引用参数的三种形式是同种类型。
-
-### 解构方法
-
-解构方法可以让实例能像元组一样被解构，或使用模式匹配的位置模式。
-解构方法是公开无返回值的，名为`Deconstruct`的方法。所有参数均为out参数。
-```csharp
-record Point
-{
-	public int X;
-	public int Y;
-
-	void Deconstruct(out int x, out int y)
-	{
-		x = X;
-		y = Y;
-	}
-
-	void Deconstruct(out int x, out int y, out double length)
-	{
-		(x, y) = this;//像元组一样解构
-		length = Math.Sqrt(x * x + y + y);
-	}
-}
-```
+- 类：  
+  - 类型定义可以定义在其他类的里面。  
+  最外层的类称为顶级类，里面的类称为嵌套类。  
+  - 嵌套类可以访问定义类的`private`成员。
+- 字段：  
+  - 字段就是变量。
+  - 字段可以用`readonly`（只读）修饰。
+  - 方法里的局部变量随着方法结束而清理，  
+  字段会随着定义类的对象被清理而清理。  
+  - 引用类型的清理要等待垃圾回收功能，时机无法确定。
+- 方法：  
+  - 类里面的方法可以**重载**。  
+  重载是指名字相同，参数列表不同的方法。
+    - 参数列表指参数的类型，数量，顺序。  
+    - 引用参数和普通参数视为不同类型
+    - 引用参数的不同变体`int`,`ref`,`out`视为相同类型 
+  - 编译器会自动选择最适配的方法，但仍可能不是最优选择。
+      - 如果有多个方法适配程度相同，会出现报错。
+      - 如果形参名字不一样，可以用命名参数指定选择重载。
+- 属性：
+    - 属性可以定义访问器，调用者可以像使用变量一样使用属性。
+        - 调用者像获取变量一样获取值时，调用属性的`get`访问器
+        - 调用者像给变量赋值一样修改值时，调用属性的`set`访问器
+    - 属性和方法可以一定程度上相互转换。用哪个取决于规范和约定
+- 索引器：  
+    索引器是带参数的属性，使用`[]`访问而不是`.`访问
+- 事件:
+  - 事件是针对`委托`的属性。他的访问器是`add`和`remove`
+  - 委托储存了方法，要阻止外部调用和赋值，只允许添加或移除他自己的方法
+  - 方法可以像变量一样储存，等待合适的实际调用
 
 ## 属性
 
-属性是方法，但却以字段的形式进行调用。其理念大致有：
-
-- 封装字段。设计理念要求字段是不能访问的，一切通过属性访问。
-- 读取不会影响任何值，修改不会影响自己以外的值。（参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/fundamentals/code-analysis/quality-rules/ca1024#when-to-suppress-warnings)）
-- 方法可以报错，属性不应该报错。（参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/fundamentals/code-analysis/quality-rules/ca1065#property-get-methods)）
-
+属性的定义是在字段后加上大括号和访问器（至少有一个访问器）
 
 ```csharp
 record Rec()
@@ -58,44 +44,73 @@ record Rec()
 	int id;
 	int Id
 	{
-		get
-		{
-			return id;
-		}
-		set
-		{
-			id = value;
-		}
+		get { return id; }
+		set { id = value; }
 	}
 
-	void Hello()
+	void Call()
 	{
-		int id = Id;
-		Id = id;
+		int id = Id;//从属性获取值
+		Id = id;//为属性赋值
 	}
 }
 ```
 
 ### 访问器
 
-以上是完整形式的属性。它的关键是`get`和`set`两个访问器。
+在对属性取值/赋值时会调用对应的访问器，  
+如果没有对应的访问器，无法取值/赋值。  
+访问器有3种：
 
-`get`访问器定义了被当作变量使用时得到什么值，
+- `get`：获取值  
+  - `get`访问器是一个有返回值的方法（返回类型和属性一样）  
+  - 在被当作变量访问时调用这个访问器
+- `set`：设置值  
+  - `set`访问器是有一个参数的方法（参数类型和属性一样），  
+  参数名为`value`，这是一个上下文关键字，仅在`set`访问器中可以使用。  
+  - 被当作变量赋值时调用这个访问器，`value`为用于赋值的值。
+- `init`：初始化  
+  - `init`访问器和`set`访问器类似，只是在源码中限制了赋值的地方，  
+  仅允许在初始化阶段以及对象初始化器中访问
+  - 除了对象初始化器以外，可赋值的地方和`readonly`字段一样。
 
-`set`访问器定义了当作变量被赋值时如何修改值。
-在访问器内部，使用`value`关键字获得赋值给这个属性的值。
+访问器可以单独设置访问权限
 
-属性没有只读，但`set`可以改为`init`。这个访问器只允许在构造阶段调用。
+- 必须有两个访问器时才能给其中一个设置
+- 权限不能高于属性的权限
 
-`get`和`set`访问器可以缺少一个，如果没有就不能取值/赋值。
+### 自动属性
+
+属性可以不写逻辑，由编译器自动创建字段和定义逻辑。
+
+- 至少要有`get`访问器
+- 可以在属性后赋值以对自动创建的字段赋值初始值
+
+```csharp
+record Rec(string FirstName, string LastName)
+{
+	string FullName { get;} = FirstName + " " + LastName;
+}
+```
+
+`Property { get;} = xxx`和`Property => xxx`的区别是执行时机和执行次数
+
+- `{ get;} = xxx`是给匿名字段赋值，并且以后`get`会返回这个匿名字段
+    - 在构造阶段执行。如果这个过程会报错，那么会在构造的过程中报错
+	- 如果值是一个表达式，那么只在赋值的时候计算一次，之后不会改变
+- `=> xxx`是`get`返回的内容
+    - 如果这个过程会报错，要等到第一次访问属性的时候才报错
+	- 如果`xxx`是一个表达式，每次访问的时候都会重新计算
 
 ### lamda表达式
 
-单条语句的方法/访问器可以用lamda表达式简写。
-用`=>`连接到语句，并省略大括号。
+单行的方法，访问器，都可以以`lamda表达式`的形式来写，  
+用`=>`连接一条**单行语句**，省略大括号。
+
+如果一个属性或索引器仅有`get`访问器，那么可以省略`get`和访问器的大括号。
 
 ```csharp
-record Rec()
+record Rec2()
 {
 	int id;
 	int Id
@@ -103,43 +118,23 @@ record Rec()
 		get => id;
 		set => id = value;
 	}
+	int Id2 => id * 2;
 
-	void Hello() =>
+	void Add3() =>
 		Id = Id + 3;
 }
 ```
 
-只有`get`访问器的属性可以进一步简写
+## 索引器
+
+索引器的名字限定为`this`，在后面以`[]`填写参数列表。  
+而后与属性一样使用访问器。
+
+- 访问自己的索引器使用`this[]`
+- 访问别的变量的索引器使用`XX[]`
 
 ```csharp
-record Rec(string FirstName,string LastName)
-{
-	string FullName => FirstName +" "+ LastName;
-}
-```
-
-### 自动属性
-
-如果只是为了设计理念，而不打算添加任何逻辑而声明属性的话，
-可以省略逻辑部分，访问器直接以分号结尾。
-自动属性必须有`get`访问器。
-
-自动属性会自动合成一个匿名字段，并让这个属性的访问器控制那个匿名字段。
-并且可以在属性上赋初始值。
-
-```csharp
-record Rec(string FirstName, string LastName)
-{
-	string FullName { get; init; } = FirstName + " " + LastName;
-}
-```
-
-## 索引
-
-索引是带参数的属性。同样依靠访问器工作。但名字被限定为`this`。
-
-```csharp
-record Rec(string FirstName, string LastName)
+record Rec4(string FirstName, string LastName)
 {
 	string this[int i]
 	{
@@ -159,52 +154,276 @@ record Rec(string FirstName, string LastName)
 }
 ```
 
-如果是调用自己的索引器，使用`this`加索引。
-如果调用别人的索引器，使用在实例后加索引。
-
 ## 事件
 
-事件是专用于委托的访问器。请参阅委托。
+事件需要在字段类型前加上`event`，并且只有委托类型可以使用。
 
-## 嵌套类
-
-类型声明除了可以直接在最外层声明外，也可以作为类成员声明。
+- 事件使用`add`和`remove`访问器，且必须存在
+    - 这两个访问器都是一个参数，无返回值的方法。
+- 自动事件可以在声明类里调用他的匿名字段。
 
 ```csharp
-record Rec(string FirstName, string LastName)
+record Rec()
 {
-	record Rc2();
+	Action action;
+	event Action ActionEvent2
+	{
+		add { action += value; }
+		remove { action -= value; }
+	}
+
+	event Action ActionEvevt;
+
+	void Call()
+	{
+		ActionEvevt();
+		ActionEvent2();//有访问器的事件无法调用
+	}
 }
 ```
 
+## 匿名字段，内部名称
 
-<!--
-using System.IO.Compression;
+自动属性和自动事件会创建一个匿名字段。  
+这个字段的名字不符合c#的标识符命名规则，不能在源码里访问到。
 
-var t = typeof(P);
+而访问器，索引器，运算符都会创建一个方法。  
+这个方法名是合法的，如果有其他成员使用了相同的名字，会提示名字已使用。  
+此外，这些内部名字也是文档里使用的名字。
 
-foreach (var item in t.GetMembers(System.Reflection.BindingFlags.NonPublic | System.Reflection.BindingFlags.Instance))
+```csharp
+class C
 {
-	Console.WriteLine(item.ToString() + "\t" + item.MemberType);
-}
-
-
-class P
-{
-	 int A { get; set; }
-	/*int get_A()
-	{
-		return 1;
-	}
-	void set_A(int value)
-	{
-
-	}*/
+	int A { get; set; }
+	int get_A() => 1;
+	void set_A(int value) { }
 	int this[int i] { get => 0; set => _ = value; }
 
-	//int Item(int i) { }
-	//	void set_Item(Int32 a, int value) { }
+	int Item;
+	int get_Item(int a) { }
+	void set_Item(int a, int value) { }
+}
+```
 
+# 静态和实例
+
+实例成员是需要实例才能讨论的内容。  
+例如人的身高必须指出一个人才能讨论。
+
+静态成员是依附于类型的，不需要考虑实例。  
+例如人有两条腿不需要指出具体的人就能讨论。
+
+## 实例成员
+
+- 实例成员可以从该类型的值上访问
+- 在类的内部可以使用`this.`访问自己的成员
+    - 定义了同名参数时可以以此举访问到实例成员
+- 实例字段的初始值不能使用其他实例字段参与的表达式。
+
+## 静态成员
+
+- 静态成员使用`static`修饰
+    - `const`也视为静态成员
+    - 静态成员从类型上访问
+- 静态与`this`（代表实例）冲突，不能定义静态索引器
+- 静态成员不能直接使用实例成员，必须通过实例访问
+- 静态字段可以使用其他静态字段参与的表达式进行赋值
+    - 按定义顺序进行初始化，还没初始化的值为`default`
+    - 实例字段可以使用静态成员参与的表达式作为初始值
+
+```csharp
+Console.WriteLine(People.Leg);
+
+record People(string Name)
+{
+	public static int Leg => 2;
+}
+```
+
+## 构造器
+
+构造器是一种没有返回值，名字和类名相同的方法。  
+构造器的意义是：
+
+- 普通方法是没有办法控制调用顺序的，但构造器必定先于其他方法被调用。
+- 构造器必定会被调用，且只会执行一次。
+- 可以为只读字段赋值，或者使用init访问器。
+
+一个实例的初始化顺序为
+
+1. 从自身到基类依次执行
+   1. 静态初始值
+   2. 静态构造器
+   3. 实例初始值
+2. 从基类到自身依次执行
+   1. 实例构造器
+   - 直到这里都可以为`readonly`字段和仅`get`自动属性赋值
+3. 对象初始化器
+    - 直到这里都可以为`init`访问器赋值
+
+如果一个类没有写构造器，编译器会自动合成一个`public`的无参构造器。  
+
+- 如果`class`写了构造器，就不会合成这个无参构造器
+- 构造器的默认访问权限也是`private`,要让外部访问也要加`public`
+
+### 主构造器
+
+在类型后的参数列表，是主构造器。
+- 实例成员可以使用主构造器里的值作为初始值。
+- 如果方法（包括索引，属性，事件）里使用了主构造器里的参数，  
+  那么还会自动保存这些参数作为字段。
+    - `record`类型无论方法里是否使用都会保存，并且会保存为属性而非字段。
+
+### 构造器链
+
+构造器重载时，如果想调用其他构造器，  
+为了保证构造器只调用一次，必须使用特殊语法调用。  
+
+调用的其他构造器只能在构造器执行的最开始。  
+如果有主构造器，那么调用链上必须含有主构造器。
+
+```csharp
+record People(string Name)
+{
+	public People() : this(20) { }
+	public People(int Id) : this(Id.ToString()) { }
+}
+```
+
+### 静态构造器
+
+静态构造器在第一次访问这个类型时调用。
+静态构造器由系统调用，不能有访问权限和参数。
+
+```csharp
+Console.WriteLine("=========");
+Console.WriteLine(People.Leg);
+
+record People(string Name)
+{
+	public static int Leg => 2;
+	static People()
+	{
+		Console.WriteLine("调用了静态构造器");
+	}
+}
+```
+
+### 终结器
+
+终结器是在构造器的类名前加上`~`，由系统调用，不能含有参数和访问权限。  
+在被垃圾清理时会执行。c#的垃圾清理是不确定的，不要依赖终结器进行清理。
+
+```csharp
+record People()
+{
+	~People()
+	{
+        Console.WriteLine("清理掉了");
+    }
+}
+```
+
+## 静态类
+
+`class`可以声明为静态的
+
+- 这样的类不能有构造器
+    - 自动合成的构造器也没有
+- 不能声明这种类型的变量（包括参数）和返回值
+- 所有成员都必须是静态的
+
+### 扩展方法
+
+静态类中可以存在扩展方法。
+
+- 必须在顶级静态类中定义，不能是嵌套类。
+- 第一个参数使用`this`修饰。
+- 扩展方法可以从被修饰的类型上以实例方法语法调用，不填入`this`修饰的参数。
+- 仍然是静态方法，所以可以从`null`身上调用。
+- 对于结构，可以同时使用`ref`修饰。
+
+```csharp
+string s1 = "世界";
+bool b1 = true;
+
+s1.Hello();//像实例方法调用
+b1.Reverse();//不需要添加ref，修改会作用到这个变量上
+Tool.Hello(s1);//也能正常用静态方法调用。
+Tool.Reverse(ref b1);//只有值类型才能声明ref扩展方法
+static class Tool
+{
+	public static void Reverse(ref this bool b)
+	{
+		b = !b;
+		Console.WriteLine(b + "被逆转了");
+	}
+
+	public static void Hello( this string s)
+	{
+		Console.WriteLine("你好" + s);
+	}
+} 
+```
+
+## 自定义运算符
+
+使用`operator`可以为这个类型定义运算符，一些规则如下
+
+- 是静态方法
+- 参数至少有一个是自己类型。
+- 对于二元运算，参数的顺序是有影响的（有些运算不满足交换律）。
+- 不能在双方类型定义相同顺序和类型的运算符，会出现歧义。
+- 必须有返回值，不能是void。
+- 一些运算符必须成对出现，但不要求逻辑上互斥。
+
+```csharp
+record Speed(int MetrePerSecond = 0)
+{ 
+	public static bool operator !(Speed L) => L.MetrePerSecond != 0;
+
+	public static int operator ~(Speed L) => -L.MetrePerSecond;
+
+	public static Speed operator +(Speed L, Speed R)
+		=> new Speed(L.MetrePerSecond + R.MetrePerSecond);
+}
+```
+
+### 自增和自减
+
+- `++`和`--`要求返回值类型必须是自己。
+- 当一个变量完成了`++`或`--`后，这个变量会执行一个赋值操作，
+- 用这个运算符的返回值将原变量替换。
+
+### true和false
+
+类型可以重载`true`运算符
+
+- 这个类型的值可以作为条件，放入到`if`，`while`.三元运算符中作为条件。
+    - 不过，他还是不能直接给`bool`变量赋值或是以其他形式当作`bool`。
+- `true`运算符要求同时重载`false`运算符，但`false`的作用极其有限
+    - `false`运算符唯一的作用是 ：
+	1. 你需要重载`&`运算符
+	2. 你的`&`运算符的返回值类型要和自己一样
+	3. 然后你就能使用`&&`逻辑运算符，运算规则是`false(x) ? x : x & y`
+
+## 自定义类型转换
+
+- 类型转换使用`implicit`（隐式），`explicit`（显示）之一
+- 加上`operator`指定
+- 参数和返回值其中有一个是自身的类型。
+
+```csharp
+record Electric
+{
+	public static explicit operator Magnetism(Electric L) => new Magnetism();
 }
 
--->
+record Magnetism
+{
+	public static implicit operator Electric(Magnetism L) => new Electric();
+}
+```
+
+- 转换没有传递性，但每一个隐式转换都可以以显示转换调用。
+    - 有必要的话可能需要使用这种方式转换`(生物能)(化学能)(热能)电能`。
