--- a/语法/结构和类.md
+++ b/语法/结构和类.md
@@ -1,179 +1,113 @@
-﻿# 结构和类
+﻿# 自定义类型
 
-结构和类是c#中储存数据的基本单元。
-
-结构和类的取舍的设计理念参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/choosing-between-class-and-struct)。
-
-## 结构
-
-结构是值类型，一般用于高性能代码中。（设计理念参阅[这里](https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/struct)）
-
-- 变量里直接存储内容，没有查找指针的开销。
-- 赋值变量会复制所有内容， 要注意大型结构的复制开销。
-- 结构的默认值是所有内容都是默认值。
-- 结构变量可以在不赋值的情况下访问内容，但它们没有初始值。
-- 不能包含自己的类型。
+c#中，类型定义必须处于顶级语句之下。  
+一个最简单的类定义如下：
 
 ```csharp
-MyStruct MyStruct;
-MyStruct.A = 10;
-Console.WriteLine(MyStruct.A);
+class C;
+```
 
-struct MyStruct
+类可以像方法一样有参数列表和方法体。  
+
+- 类的“方法体”并不是真正的“方法体”，他们能写的东西不一样
+- 类的参数列表和方法体是独立的，可以都存在 / 都不存在 / 只存在其中一个
+- 如果写了“方法体”就不要用分号结尾
+
+```csharp
+class MyClass()
 {
-	public int A;
-	public int B;
 }
 ```
 
-### 不可变性 
+## 结构,类,记录
 
-结构只能对变量进行修改。
-从方法或属性得到的返回值是临时值，修改了也无法找到这个实例。
-除非是`ref`变量。
+定义类前面的关键字可以有多种选择，会有不同的特点
+
+- `class`：类，引用类型。
+- `sturt`：结构，值类型。
+    - 结构常用于高性能代码中，为此他还有专属的修饰符：
+    - `readonly`：只读，创建完成后内容不可变。  
+    在方法的`in`参数引用传递后，如果调用方法，仍然有可能导致内容更改。  
+    如果会更改，在方法里仍然会复制出一个结构，而不再是引用传递。  
+    只读结构强行要求所有内容只读，以避免结构的复制。
+    - `ref`：引用，结构里可以包含引用变量和引用结构。  
+    引用变量是指针的一种，为了保证使用安全，引用结构有很大限制。  
+    例如不能创建数组，作为泛型类型，作为非引用结构的类成员，被方法捕获。
+- `record`：记录，根据类后面的参数列表自动合成成员。
+    - `record class`可以省略掉`class`。  
+    - `record sturt`合成的成员可以赋值，`record class`和`readonly record struct`不行。
+    - 自动合成`ToString`方法
+    - 根据参数列表自动合成解构方法，使得可以像元组一样解构
 
 ```csharp
-Player player = new Player();
-//player.Point.X = 60;  不能这样赋值 
-player.Point = player.Point with { X = 60 };
+Point point = new Point(20, 30);
+var (a, b) = point;//像元组一样解构
 
 record struct Point(int X, int Y);
-record struct Player(int Hp, Point Point);
+record Rec { }
+class Cla(int X, int Y);//不具有record也没有内容时，参数列表没有意义
 ```
 
-### 只读方法
+## 对象初始化器
 
-结构可以为方法（访问器）添加`readonly`修饰，在方法内视为所有字段是只读的。
-以引用传递大型结构时避免修改值。
+在创建一个对象后对他的成员进行赋值，可以用对象初始化器语法。
 
-但只读方法内可以调用非只读方法，这样能绕过只读限制。
-此时引用传递也仍然会复制一份。
-
-### 只读结构
-
-在结构上使用只读`readonly`修饰，会要求结构内所有字段都是只读的。
-在以引用传递大型结构时避免被修改和复制开销。
-
-记录结构的合成属性也是只读的。
+- 除了可以为`init`访问器的属性赋值外，与直接赋值没有区别
+- 对象初始化器的执行顺序和自己赋值一样，晚于所有初始化过程  
+  也就是说对象初始化器的赋值会覆盖之前初始化过程中的值
+- 对象初始化器中如果不是给整个集合赋新值，那么可以对元素初始化
+    - 不需要和集合长度等长
 
 ```csharp
-readonly record struct Point(int X, int Y);
+Point2 point = new Point2(2, 2, new int[10]) { X = 20, Y = 30, Arr = { [0] = 1 } };
+
+record struct Point2(int X, int Y, int[] Arr);
 ```
 
-### 引用结构
+### 克隆
 
-在结构前加上`ref`修饰，可以在结构内声明引用变量。
-引用变量是对指针的安全替代物，用于高性能代码中。
-
-但引用结构自身不能存在于引用访问的方式中。
-例如作为任何引用类型的成员，构建引用结构的数组等等。
+如果类型定义有`record`或`struct`之一，则可以使用`with`表达式。  
+`with`表达式可以使用对象初始化器语法进行覆写一些值，  
+没写的值都赋值被克隆的对象。
 
 ```csharp
-int[] arr = [10, 20];
-MyStruct MyStruct = new MyStruct(arr); 
-MyStruct.Swap();
-Console.WriteLine(arr[0]);
-Console.WriteLine(arr[1]);
+var point2 = point with { X = 30 };//Y的值会复制point.Y
+```
 
-ref struct MyStruct(params int[] arr)
+## 访问权限
+
+在类型内部里定义的东西，可以在所属大括号外访问到。  
+如果有访问权限的话。
+
+```csharp
+Rec2.Rec3 rec = new Rec2.Rec3();//不可访问，有保护级别
+
+record Rec2
 {
-	public ref int A = ref arr[0];
-	public ref int B = ref arr[1];
-
-	public void Swap()
-	{
-		(A, B) = (B, A);
-	}
+	record Rec3;
 }
 ```
 
-## 类
+访问权限有以下修饰符：
 
-类是c#中的基本单位，是引用类型。
-通常用于存放大型的，持久的，可变的数据。
-类可以包含自己的类型。内存里的占位只有一个指针大小，在访问内容时才会寻找实际值。
-
-```csharp
-class MyClass;
-```
-
-### 静态类
-
-静态类是c#中的工具类。这种类型不允许存在构造方法和创建实例。
-静态类的设计理念参阅[这里]（https://learn.microsoft.com/zh-cn/dotnet/standard/design-guidelines/static-class）。
-
-#### 扩展方法
-
-静态类中可以存在扩展方法。
-
-- 第一个参数使用`this`修饰。
-- 扩展方法可以从被修饰的类型上以实例方法语法调用，不填入`this`修饰的参数。
-- 仍然是静态方法，所以可以从`null`身上调用。
-- 对于结构，可以同时使用`ref`修饰。
+1. `public`（公开）：任何地方都能访问
+    - 接口的实例成员默认为此权限
+2. `protected  internal`：本程序集的类或派生自该类的类
+2. `protected`（保护）：派生自该类的类
+2. `internal`(内部)：本程序集
+    - 最外层的类定义默认为此权限
+    - 程序集在解决方案里是一个**项目**。
+    - 这个范围是为**我能用，而别人不能用**的范围。  
+    除非被别人拿到源码，否则引用项目，或引用`dll`都不能访问。
+2. `private protected`：本程序集里且派生自该类的类
+2. `private`（私有）：仅限所属大括号内  
+    - 默认类成员（包括类型定义）都为此权限
 
 ```csharp
-string s1 = "世界";
-bool b1 = true;
+Rec2.Rec3 rec = new Rec2.Rec3();//可以访问
 
-s1.Hello();//像实例方法调用
-b1.Reverse();//不需要添加ref，修改会作用到这个变量上
-Tool.Hello(s1);//也能正常用静态方法调用。
-Tool.Reverse(ref b1);//只有值类型才能声明ref扩展方法
-static class Tool
+record Rec2
 {
-	public static void Reverse(ref this bool b)
-	{
-		b = !b;
-		Console.WriteLine(b + "被逆转了");
-	}
-
-	public static void Hello( this string s)
-	{
-		Console.WriteLine("你好" + s);
-	}
-} 
-```
-
-### 抽象类
-
-抽象类可以包含抽象方法，这是一种没有方法主体的方法。
-因为调用抽象方法会出现问题，所以抽象类的构造器只能由派生类使用，不允许自身创建实例。
-
-```csharp
-abstract class MyClass
-{
-	public abstract void Hello();
+	public record Rec3;
 }
-```
-
-## 记录
-
-结构和类可以用`record`修饰（记录类可以省略`class`）。
-
-- 根据主构造器自动合成属性。
-  - 除非有同名的成员。
-  - 类生成`{get;init;}`访问器，结构生成`{get;set;}`访问器。
-- 根据主构造器自动合成解构方法。
-- 自动生产`ToString`方法，像元组一样输出主构造器里参数的名字和值。
-- 重写相等判断，根据主构造器里的参数内容。
-- 让类也可以使用`with`生成复制。
-
-```csharp
-MyClass my = new MyClass(50, 20);
-var my2 = my with { X = 10 };
-var my3 = my2 with { };
-
-record MyClass(int X, int Y);
-```
-
-### 创建部分属性修改的新值
-
-对于值类型，匿名类型，记录类，可以使用`with`创建部分内容变动的新值，其他内容照原样复制。
-
-```csharp
-var student1 = (age: 12, name: "小明");
-var student2 = new { age = 12, name = "小明" };
-
-var student3 = student1 with { age = 15 };
-var student4 = student2 with { name = "小丽" };
 ```
