重置状态机

--- a/语法/类成员.md
+++ b/语法/类成员.md
@@ -216,8 +216,9 @@ class C
 ## 实例成员
 
 - 实例成员可以从该类型的值上访问
-- 在类的内部可以使用`this.`访问自己的成员
-    - 定义了同名参数时可以以此举访问到实例成员
+- 在类的内部可以使用`this`表示自己
+    - 定义了同名参数时可以使用`this.`访问到实例成员
+    - 如果方法参数或是变量赋值要使用自己时，使用`this`传递。
 - 实例字段的初始值不能使用其他实例字段参与的表达式。
 
 ## 静态成员
