--- a/语法/结构和类.md
+++ b/语法/结构和类.md
@@ -24,15 +24,20 @@ class MyClass()
 定义类前面的关键字可以有多种选择，会有不同的特点
 
 - `class`：类，引用类型。
+    - 类是引用类型，任何引用类型变量统一只有一个指针的大小。  
+    在访问时解析指针。不会递归循环申请内存，所以类里可以包含自己类型。
 - `sturt`：结构，值类型。
     - 结构常用于高性能代码中，为此他还有专属的修饰符：
-    - `readonly`：只读，创建完成后内容不可变。  
-    在方法的`in`参数引用传递后，如果调用方法，仍然有可能导致内容更改。  
-    如果会更改，在方法里仍然会复制出一个结构，而不再是引用传递。  
-    只读结构强行要求所有内容只读，以避免结构的复制。
-    - `ref`：引用，结构里可以包含引用变量和引用结构。  
-    引用变量是指针的一种，为了保证使用安全，引用结构有很大限制。  
-    例如不能创建数组，作为泛型类型，作为非引用结构的类成员，被方法捕获。
+        - `readonly`：只读，创建完成后内容不可变。  
+        在方法的`in`参数引用传递后，如果调用方法，仍然有可能导致内容更改。  
+        如果会更改，在方法里仍然会复制出一个结构，而不再是引用传递。  
+        只读结构强行要求所有内容只读，以避免结构的复制。
+        - `ref`：引用，结构里可以包含引用变量和引用结构。  
+        引用变量是指针的一种，为了保证使用安全，引用结构有很大限制。  
+        例如不能创建数组，作为泛型类型，作为非引用结构的类成员，被方法捕获。
+    - 结构在申请内存时，也会为他的所有内容申请内存。  
+        - 如果内容有结构，会递归为这些结构的内容申请内存。  
+        - 所以如果结构里包含自己的话，会死循环。
 - `record`：记录，根据类后面的参数列表自动合成成员。
     - `record class`可以省略掉`class`。  
     - `record sturt`合成的成员可以赋值，`record class`和`readonly record struct`不行。
